--- a/articles/rfi/999951.md
+++ b/articles/rfi/999951.md
@@ -1,5 +1,5 @@
-<!--1713350701000-->
-[美亚太助卿康达会晤中国国台办官员 学者称不太寻常](https://www.rfi.fr/cn/%E5%8F%B0%E6%B9%BE/20240417-%E7%BE%8E%E4%BA%9A%E5%A4%AA%E5%8A%A9%E5%8D%BF%E5%BA%B7%E8%BE%BE%E4%BC%9A%E6%99%A4%E4%B8%AD%E5%9B%BD%E5%9B%BD%E5%8F%B0%E5%8A%9E%E5%AE%98%E5%91%98-%E5%AD%A6%E8%80%85%E7%A7%B0%E4%B8%8D%E5%A4%AA%E5%AF%BB%E5%B8%B8)
+<!--1713356105000-->
+[中国第一季度增幅高于预期，但经济疲软疑虑依存 - 法国报纸摘要](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E6%B3%95%E5%9B%BD%E6%8A%A5%E7%BA%B8%E6%91%98%E8%A6%81/20240417-%E4%B8%AD%E5%9B%BD%E7%AC%AC%E4%B8%80%E5%AD%A3%E5%BA%A6%E5%A2%9E%E5%B9%85%E9%AB%98%E4%BA%8E%E9%A2%84%E6%9C%9F%EF%BC%8C%E4%BD%86%E7%BB%8F%E6%B5%8E%E7%96%B2%E8%BD%AF%E7%96%91%E8%99%91%E4%BE%9D%E6%97%A7)
 ------
 
-<div>17/04/2024 - 11:49</div><img src="https://s.rfi.fr/media/display/7e261e0e-b47b-11ee-8b2f-005056a97e36/w:1280/p:16x9/AP24012403412983.jpg"><p><strong>中国外交部对外声明表示，康达（Daniel Kritenbrink）、白宫国安会中国与台湾事务资深主任柏兰（Sarah Beran）15日于北京会晤马朝旭。国台办16日声明指出，康达、柏兰等人也会晤了仇开明，“阐明了中方关于台湾问题的原则立场”。中央社今天引述学者认为，美国外交官员会晤中共涉台官员，这不太寻常，显示台海议题讯息交流获关切。        </strong></p><div><p>美国务院亚太事务助卿康达等人在北京会晤中国外交部副部长马朝旭、国台办副主任仇开明。台湾成功大学政治学系教授王宏仁今天对中央社剖析，美国外交事务官员会晤中共涉台官员，这不太寻常，其中还有白宫国安会人员随团，显见这趟到访不仅是为了美国国务卿布林肯（Antony Blinken）访问中国铺路，台海议题也是讨论项目。</p><p>王宏仁认为，美国外交系统官员会晤中共涉台官员，这不太寻常，可以视作中美双方包括台海议题在内等各个议题沟通顺畅的表现，也有稳定台海作用；不过国台办系统在中国政府体系算偏于事务性的单位，没有左右台海议题影响力。</p><p>台湾国家政策研究基金会副研究员李正修对中央社表示，过去时任国台办主任张志军也曾赴美访问，美国没有专门部门应对两岸关系，由美国务院等官员接待实为合理；美国外交系统官员在北京会晤国台办官员，这确实较为罕见。</p><p>李正修认为，这显示美中双方对于台海议题有高度关切感，北京多次强调“台湾红线”，拉出涉台单位对话美国；美国则是期盼台海维持现状、不被破坏，相信彼此在这场会晤中充分交换了意见，也有找到共识，外交场合的会晤，台面下谈及的、接触的，往往比对外宣布的多更多。</p><p>据中央社，中国外交部会后声明表示，美中双方依两国元首旧金山会晤和近期通话达成的重要共识，就推进中美各领域对话合作、妥善管控分歧进行了坦诚、深入、建设性的沟通。而美国务院会后新闻稿表示，康达、柏兰向仇开明强调维持台海和平稳定的重要性，美国基于台湾关系法、美中三公报、六项保证的一中政策没有改变。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWZD.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%258F%25B0%25E6%25B9%25BE%2F20240417-%25E7%25BE%258E%25E4%25BA%259A%25E5%25A4%25AA%25E5%258A%25A9%25E5%258D%25BF%25E5%25BA%25B7%25E8%25BE%25BE%25E4%25BC%259A%25E6%2599%25A4%25E4%25B8%25AD%25E5%259B%25BD%25E5%259B%25BD%25E5%258F%25B0%25E5%258A%259E%25E5%25AE%2598%25E5%2591%2598-%25E5%25AD%25A6%25E8%2580%2585%25E7%25A7%25B0%25E4%25B8%258D%25E5%25A4%25AA%25E5%25AF%25BB%25E5%25B8%25B8&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E4%BA%9A%E5%A4%AA%E5%8A%A9%E5%8D%BF%E5%BA%B7%E8%BE%BE%E4%BC%9A%E6%99%A4%E4%B8%AD%E5%9B%BD%E5%9B%BD%E5%8F%B0%E5%8A%9E%E5%AE%98%E5%91%98%20%E5%AD%A6%E8%80%85%E7%A7%B0%E4%B8%8D%E5%A4%AA%E5%AF%BB%E5%B8%B8%20-%20https%3A%2F%2Frfi.my%2FAWZD.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E4%BA%9A%E5%A4%AA%E5%8A%A9%E5%8D%BF%E5%BA%B7%E8%BE%BE%E4%BC%9A%E6%99%A4%E4%B8%AD%E5%9B%BD%E5%9B%BD%E5%8F%B0%E5%8A%9E%E5%AE%98%E5%91%98%20%E5%AD%A6%E8%80%85%E7%A7%B0%E4%B8%8D%E5%A4%AA%E5%AF%BB%E5%B8%B8%20-%20https%3A%2F%2Frfi.my%2FAWZD.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWZD.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E4%BA%9A%E5%A4%AA%E5%8A%A9%E5%8D%BF%E5%BA%B7%E8%BE%BE%E4%BC%9A%E6%99%A4%E4%B8%AD%E5%9B%BD%E5%9B%BD%E5%8F%B0%E5%8A%9E%E5%AE%98%E5%91%98%20%E5%AD%A6%E8%80%85%E7%A7%B0%E4%B8%8D%E5%A4%AA%E5%AF%BB%E5%B8%B8&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 13:35</div><img src="https://s.rfi.fr/media/display/de712a84-105a-11ea-a2a3-005056bff430/w:1280/p:16x9/03-revue-de-presse_0.png"><p><strong>周三（4月17日）出版的法国各报头版新闻重点各有侧重，主要内容分别有：在即将迎来盟军诺曼底登陆80周年纪念前夕，法国总统前往德龙省瓦西昂韦科尔向遭到德军杀害的抵抗战士和平民致敬；巴黎奥运会倒计时100天，各方关注焦点不一；在异常紧张的局势背景下，以色列继续其在加沙的殖民政策；欧元区今年经济增长远低于中国和美国；关于中国的消息主要围绕德国总理访华以及中国第一季度经济增长展开。                    </strong></p><div><p><strong>朔尔茨希望与习近平讨论乌克兰人民的“公正和平</strong>”</p><p>德国总理朔尔茨周日（4月14日）抵达中国访问。这是在欧盟与中国在贸易领域展开较量的背景下展开的一次访问。欧盟目前正在对中国新能源车进行反补贴、不正当竞争展开调查，并指责中国用低成本产品充斥欧洲市场。《费加罗报》、《十字架报》和《回声报》分别报道了朔尔茨在中国访问的相关消息。</p><p>中国国家主席习近平周二与德国总理朔尔茨举行了会晤。朔尔茨希望能与习近平就如何在乌克兰实现“公正和平”达成一致。他还披露：两国领导人同意支持将在瑞士召开的乌克兰和平会议。</p><p><strong>中德两国不断变化的贸易关系</strong></p><p>《回声报》突出报道了德中两国的（贸易）关系。该报首先注意到：去年，中德两国贸易额大幅下降，仅略高于中美贸易额。这与德国经济衰退以及一些大型集团将更多研发和生产转移到中国有关。作为德国的最大贸易伙伴，与中国保持密切的贸易关系对德国至关重要。</p><p>由于在诸多领域面临来自中国本土企业的更激烈的竞争，德国企业被迫改变战略。一些大型企业正在加强在中国的研发和生产基地，同时寻求降低在德国的成本。随着本土化的日益增长，柏林一再发出呼吁，要求中国提供公平的竞争环境。与此同时，柏林在去年7月发布的“中国战略”中提到的“去风险”理念并未被提上该国各大公司的议程。</p><p><strong>朔尔茨捍卫自由贸易事业</strong></p><p>《回声报》的另外一篇报道，揭示了朔尔茨极力捍卫自由贸易理念。报道指出：对历任德国总理来说，与中国相处，就要极力维持一种难度很大的平衡，这便是：既要为德国争得极为有利可图的经济关系，又不要显露出对中共政权过于宽容。而对现任总理朔尔茨而言，这条路无疑比历届前任更艰难。在开启中国之行之时，朔尔茨便再次演练起具有德国总理特色的平衡游戏。但是这一次却游走于欧盟与中国之间。</p><p>关于欧盟呼吁保护自身免受中国工业产能过剩影响的问题，朔尔茨宣称：主张拥护“开放和公平的市场”。但前提是：竞争必须公平，不存在倾销、产能过剩和侵犯专利。德国总理还强调：应该为外国公司建立生产基地提供方便，不必为此设置数目繁多的官僚障碍。朔尔茨还对中国的“倾销”和“产能过剩”发出警告，同时呼吁欧盟不要搞保护主义。</p><p><strong>中国经济增长的反弹并不能消除对未来的疑虑</strong></p><p>《回声报》还刊出一篇报道，披露中国今年第一季度国内生产总值按年率计算增长5.3%，增幅高于预期。不过，该报指出：这一增长数字并不能消除对中国经济疲软的担忧。</p><p>推动经济活动的是工业部门：在政府对技术和能源转型的支持下，制造业生产大幅增长，工业投资年增长率近10%，基础设施投资也大幅增加。不过，报道引述专家观点指出：由公共投资驱动的增长似乎并不平衡。零售销售没有达标，表明消费者需求仍然疲软。私营企业投资的增长速度远低于公共投资，引发了对中国经济活动反弹能否持续的质疑。</p><p>另外，北京面临的另一个难题是房地产危机，这是过去三十年来最严重的一次。它削弱了储蓄投资于住房的家庭的信心。房地产投资依然举步维艰。</p><p>中国经济受到房地产行业持续放缓的影响。信贷繁荣和萧条从来都不会很快得到解决，这次也不例外。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E6%B5%81%E8%8A%B3/" title="流芳">流芳</a></div></div></div></div>
