--- a/articles/rfi/999958.md
+++ b/articles/rfi/999958.md
@@ -1,5 +1,5 @@
-<!--1713305701000-->
-[所罗门群岛将举行全国选举](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20240416-%E6%89%80%E7%BD%97%E9%97%A8%E7%BE%A4%E5%B2%9B%E5%B0%86%E4%B8%BE%E8%A1%8C%E5%85%A8%E5%9B%BD%E9%80%89%E4%B8%BE)
+<!--1713345302000-->
+[澳大利亚发表首个「国家防卫战略」强调中国威胁 北京反驳](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240417-%E6%BE%B3%E5%A4%A7%E5%88%A9%E4%BA%9A%E5%8F%91%E8%A1%A8%E9%A6%96%E4%B8%AA-%E5%9B%BD%E5%AE%B6%E9%98%B2%E5%8D%AB%E6%88%98%E7%95%A5-%E5%BC%BA%E8%B0%83%E4%B8%AD%E5%9B%BD%E5%A8%81%E8%83%81-%E5%8C%97%E4%BA%AC%E5%8F%8D%E9%A9%B3)
 ------
 
-<div>16/04/2024 - 22:49</div><img src="https://s.rfi.fr/media/display/72f66436-fa84-11ee-9d74-005056bf30b7/w:1280/p:16x9/2024-03-25T051154Z_17230021_RC2O02AQY5SK_RTRMADP_3_SOLOMONISLANDS-ELECTION.JPG"><p><strong></strong></p><div><p>大约 6780 名选举官员将参与其中—是 2019 年选举人数的两倍，因为选民还将选出新的省议会和霍尼亚拉市议会。为了防止发生骚乱，澳大利亚、新西兰和巴布亚新几内亚等邻国已在选举期间派出警察协助维持安全，因为此前选举之后都会出现一段时期的骚乱。</p><p>夏威夷大学太平洋岛屿研究中心副教授兼前主任塔西修斯·卡布陶拉卡称，这次选举“可能是所罗门群岛自独立以来最重要的一次”，因为该国持续存在的经济问题及其在中美之间更大竞争中所扮演的角色。</p><p>对于外国观察家来说，主要问题是所罗门群岛与中国的持续关系以及总理索加瓦雷是否会再次当选。索加瓦雷因在 2019 年将外交承认从台湾转为中国而闻名于海外。</p><p>这一有争议的决定引发了骚乱，2021 年 11 月，抗议者瞄准霍尼亚拉的唐人街，并试图冲进索加瓦雷的住所，应政府要求，在澳大利亚警察特遣队的帮助下恢复了和平。</p><p>随后在 2022 年，索加瓦雷与北京签署了一项秘密安全协议，引起了澳大利亚、新西兰和美国的恐慌，这些国家担心中国有一天可能会在那里建立海军基地，从而极大地扩大北京的军事影响力，该岛链位于澳大利亚布里斯班市以东约 2000 公里（1200 英里）处，距中国上海市东南部仅 6000 多公里（3728 英里）处。</p><p>索加瓦雷的最高职位竞争对手之一、直言不讳的国会议员、该国第一任总理的儿子小彼得·凯尼洛雷亚 (Peter Kenilorea Jr) 已承诺将与台湾建立关系。</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWUK.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25BA%259A%25E6%25B4%25B2%2F20240416-%25E6%2589%2580%25E7%25BD%2597%25E9%2597%25A8%25E7%25BE%25A4%25E5%25B2%259B%25E5%25B0%2586%25E4%25B8%25BE%25E8%25A1%258C%25E5%2585%25A8%25E5%259B%25BD%25E9%2580%2589%25E4%25B8%25BE&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%89%80%E7%BD%97%E9%97%A8%E7%BE%A4%E5%B2%9B%E5%B0%86%E4%B8%BE%E8%A1%8C%E5%85%A8%E5%9B%BD%E9%80%89%E4%B8%BE%20-%20https%3A%2F%2Frfi.my%2FAWUK.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%89%80%E7%BD%97%E9%97%A8%E7%BE%A4%E5%B2%9B%E5%B0%86%E4%B8%BE%E8%A1%8C%E5%85%A8%E5%9B%BD%E9%80%89%E4%B8%BE%20-%20https%3A%2F%2Frfi.my%2FAWUK.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWUK.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%89%80%E7%BD%97%E9%97%A8%E7%BE%A4%E5%B2%9B%E5%B0%86%E4%B8%BE%E8%A1%8C%E5%85%A8%E5%9B%BD%E9%80%89%E4%B8%BE&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 10:27</div><img src="https://s.rfi.fr/media/display/95825426-47e1-11ed-a455-005056a9a7b9/w:1280/p:16x9/drapeau%20Australie.jpg"><p><strong>澳大利亚今天发布了该国首个国防战略，该战略重点关注太平洋地区，称以应对中国的“胁迫策略”和日益增长的地区冲突风险。中国对此表达不高兴，称中国不是一个威胁，并说也不威胁任何人。        </strong></p><div><p>澳大利亚今天公布首份「国家防卫战略」（National Defence Strategy），显示面对中国“胁迫手段”和太平洋地区冲突风险日增，澳大利亚将进一步聚焦在亚太地区。</p><p>澳大利亚国防部长马勒斯（Richard Marles）透露对区域安全和战争风险的严峻评估，他说，“冷战结束后指引国防规划的乐观假设早已不复存在，” 并警告“中国为实现战略目标而采取了胁迫手段，澳洲不再有10年的冲突战略预警期”。</p><p>马勒斯表示，往后不会将重点放在一支几乎能在世界各地执行各式任务的平衡部队，而是聚焦于保护澳大利亚在亚太地区的利益。</p><p>马勒斯说“我们是海上贸易岛国”，还说“澳大利亚必须能够防止敌人扼杀贸易或阻止进入重要航道，”“入侵澳大利亚的情况无论如何都不太可能发生，正是因为对手毋须踏上澳大利亚国土就可对澳大利亚造成很多的损害”。</p><p>该战略核心是发展一支匿踪核动力潜舰舰队、将关键导弹能力提高两倍，并发展一支大型水面作战舰队。马勒斯说：“拥有我国史上最有能力的海军将是我方投射能力和拒止战略的核心。”</p><p>马勒斯还说，澳大利亚必须能够防止敌人封锁重要航道。</p><p>据法新社今天报道称，中国官方对澳大利亚的国家防卫战略针对中国胁迫威胁，并将中国描述为重要威胁表达不满。中国说，中国不是威胁，也不会威胁任何国家。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWY4.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240417-%25E6%25BE%25B3%25E5%25A4%25A7%25E5%2588%25A9%25E4%25BA%259A%25E5%258F%2591%25E8%25A1%25A8%25E9%25A6%2596%25E4%25B8%25AA-%25E5%259B%25BD%25E5%25AE%25B6%25E9%2598%25B2%25E5%258D%25AB%25E6%2588%2598%25E7%2595%25A5-%25E5%25BC%25BA%25E8%25B0%2583%25E4%25B8%25AD%25E5%259B%25BD%25E5%25A8%2581%25E8%2583%2581-%25E5%258C%2597%25E4%25BA%25AC%25E5%258F%258D%25E9%25A9%25B3&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%BE%B3%E5%A4%A7%E5%88%A9%E4%BA%9A%E5%8F%91%E8%A1%A8%E9%A6%96%E4%B8%AA%E3%80%8C%E5%9B%BD%E5%AE%B6%E9%98%B2%E5%8D%AB%E6%88%98%E7%95%A5%E3%80%8D%E5%BC%BA%E8%B0%83%E4%B8%AD%E5%9B%BD%E5%A8%81%E8%83%81%20%E5%8C%97%E4%BA%AC%E5%8F%8D%E9%A9%B3%20-%20https%3A%2F%2Frfi.my%2FAWY4.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%BE%B3%E5%A4%A7%E5%88%A9%E4%BA%9A%E5%8F%91%E8%A1%A8%E9%A6%96%E4%B8%AA%E3%80%8C%E5%9B%BD%E5%AE%B6%E9%98%B2%E5%8D%AB%E6%88%98%E7%95%A5%E3%80%8D%E5%BC%BA%E8%B0%83%E4%B8%AD%E5%9B%BD%E5%A8%81%E8%83%81%20%E5%8C%97%E4%BA%AC%E5%8F%8D%E9%A9%B3%20-%20https%3A%2F%2Frfi.my%2FAWY4.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWY4.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%BE%B3%E5%A4%A7%E5%88%A9%E4%BA%9A%E5%8F%91%E8%A1%A8%E9%A6%96%E4%B8%AA%E3%80%8C%E5%9B%BD%E5%AE%B6%E9%98%B2%E5%8D%AB%E6%88%98%E7%95%A5%E3%80%8D%E5%BC%BA%E8%B0%83%E4%B8%AD%E5%9B%BD%E5%A8%81%E8%83%81%20%E5%8C%97%E4%BA%AC%E5%8F%8D%E9%A9%B3&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
