--- a/articles/rfi/999970.md
+++ b/articles/rfi/999970.md
@@ -1,5 +1,5 @@
-<!--1713291301000-->
-[悉尼教堂持刀砍人案定性恐袭 马克龙称赞两位法国人英勇救人](https://www.rfi.fr/cn/%E6%B3%95%E5%9B%BD/20240416-%E6%82%89%E5%B0%BC%E6%95%99%E5%A0%82%E6%8C%81%E5%88%80%E7%A0%8D%E4%BA%BA%E6%A1%88%E5%AE%9A%E6%80%A7%E6%81%90%E8%A2%AD-%E9%A9%AC%E5%85%8B%E9%BE%99%E7%A7%B0%E8%B5%9E%E4%B8%A4%E4%BD%8D%E6%B3%95%E5%9B%BD%E4%BA%BA%E8%8B%B1%E5%8B%87%E6%95%91%E4%BA%BA)
+<!--1713300302000-->
+[美国众议院本周或就援助乌克兰以色列及台湾等法案进行独立投票？](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240416-%E7%BE%8E%E5%9B%BD%E4%BC%97%E8%AE%AE%E9%99%A2%E6%9C%AC%E5%91%A8%E6%88%96%E5%B0%B1%E6%8F%B4%E5%8A%A9%E4%B9%8C%E5%85%8B%E5%85%B0%E4%BB%A5%E8%89%B2%E5%88%97%E5%8F%8A%E5%8F%B0%E6%B9%BE%E7%AD%89%E6%B3%95%E6%A1%88%E8%BF%9B%E8%A1%8C%E7%8B%AC%E7%AB%8B%E6%8A%95%E7%A5%A8)
 ------
 
-<div>16/04/2024 - 17:44</div><img src="https://s.rfi.fr/media/display/1b5bd2be-fbe8-11ee-90d7-005056a90284/w:1280/p:16x9/2024-04-14T072041Z_689654122_RC2367AHS8HL_RTRMADP_3_AUSTRALIA-CRIME.JPG"><p><strong>澳大利亚警方今天表示，悉尼一座教会昨天在直播礼拜期间发生的持刀攻击案，是一起涉及宗教动机的极端主义恐怖行为。警方并呼吁当地社区民众控制怒火、保持冷静。法国总统马克龙今天赞扬两名法国人在抵御砍人案中的英雄行为。        </strong></p><div><p>据路透社今天报道称，悉尼西部郊区一座亚述基督教教堂昨天傍晚发生袭击事件，造成一名著名的主教受伤，所幸没有危及性命。</p><p>新南威尔斯州（New South Wales）警察局长韦柏（Karen Webb）在记者会上说：「将所有资料纳入考量后，我宣布这是一起恐怖事件。」她表示，这起攻击被视为是有宗教动机的「极端主义」行为，恐吓民众，包括教堂内的教区居民与观看线上直播的信徒。</p><p>韦柏表示，这名犯嫌「为警方所知」，但并没有被列在任何恐怖分子观察名单上。韦柏说，赶赴现场因应的警方很快就遭教会外的愤怒群众攻击，「民众利用现场可取用的物品攻击警察，包括拿砖头、混凝土与栅栏丢向警察、警察装置与警车」。</p><p>韦柏说一整个晚上都有受伤警察送医治疗。她虽没有提供受伤人数，但说这群民众损坏了20辆警车。</p><p>韦柏说：「这无法令人接受，涉及那场骚乱的人可以料想日后会有人来敲门，可能不是今天、也可能不会是明天，但我们会找到你，将你逮捕到案。」</p><p>该消息没有进一步民众对警方发怒的原因与细节。</p><p>据法新社消息，周二，法国总统马克龙赞扬了两名法国人的英勇行为，称他们是“真正的英雄”，他们在周六澳大利亚悉尼一家购物中心发生的另一次持刀袭击事件时进行了抵御，该事件导致六人死亡。</p><p>法国总统在 X 上写道：“我们的两位同胞表现得像真正的英雄，他因此非常自豪，对两人表达感激。”他还向“遭受袭击的澳大利亚人”表示“哀悼”。</p><p>法国大使表示，塞拉斯·德普雷奥和达米安·盖罗“在试图制服袭击者时表现出了极大的勇气”。</p><p>澳大利亚总理阿尔巴尼斯周二宣布，法国两人中的一位达米安·盖罗特(Damien Guerot)将获得澳大利亚公民身份，他在自动扶梯上用一根棍子英勇地击退了凶嫌。</p><p>事件中，五名妇女和一名巴基斯坦人保安丧生，该袭击并未归咎于恐怖主义。 警方正在调查袭击者是一名 40 岁的精神病男子，他是否专门针对女性行凶。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWRj.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25B3%2595%25E5%259B%25BD%2F20240416-%25E6%2582%2589%25E5%25B0%25BC%25E6%2595%2599%25E5%25A0%2582%25E6%258C%2581%25E5%2588%2580%25E7%25A0%258D%25E4%25BA%25BA%25E6%25A1%2588%25E5%25AE%259A%25E6%2580%25A7%25E6%2581%2590%25E8%25A2%25AD-%25E9%25A9%25AC%25E5%2585%258B%25E9%25BE%2599%25E7%25A7%25B0%25E8%25B5%259E%25E4%25B8%25A4%25E4%25BD%258D%25E6%25B3%2595%25E5%259B%25BD%25E4%25BA%25BA%25E8%258B%25B1%25E5%258B%2587%25E6%2595%2591%25E4%25BA%25BA&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%82%89%E5%B0%BC%E6%95%99%E5%A0%82%E6%8C%81%E5%88%80%E7%A0%8D%E4%BA%BA%E6%A1%88%E5%AE%9A%E6%80%A7%E6%81%90%E8%A2%AD%20%E9%A9%AC%E5%85%8B%E9%BE%99%E7%A7%B0%E8%B5%9E%E4%B8%A4%E4%BD%8D%E6%B3%95%E5%9B%BD%E4%BA%BA%E8%8B%B1%E5%8B%87%E6%95%91%E4%BA%BA%20-%20https%3A%2F%2Frfi.my%2FAWRj.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%82%89%E5%B0%BC%E6%95%99%E5%A0%82%E6%8C%81%E5%88%80%E7%A0%8D%E4%BA%BA%E6%A1%88%E5%AE%9A%E6%80%A7%E6%81%90%E8%A2%AD%20%E9%A9%AC%E5%85%8B%E9%BE%99%E7%A7%B0%E8%B5%9E%E4%B8%A4%E4%BD%8D%E6%B3%95%E5%9B%BD%E4%BA%BA%E8%8B%B1%E5%8B%87%E6%95%91%E4%BA%BA%20-%20https%3A%2F%2Frfi.my%2FAWRj.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWRj.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%82%89%E5%B0%BC%E6%95%99%E5%A0%82%E6%8C%81%E5%88%80%E7%A0%8D%E4%BA%BA%E6%A1%88%E5%AE%9A%E6%80%A7%E6%81%90%E8%A2%AD%20%E9%A9%AC%E5%85%8B%E9%BE%99%E7%A7%B0%E8%B5%9E%E4%B8%A4%E4%BD%8D%E6%B3%95%E5%9B%BD%E4%BA%BA%E8%8B%B1%E5%8B%87%E6%95%91%E4%BA%BA&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>16/04/2024 - 22:27</div><img src="https://s.rfi.fr/media/display/f307a8a0-fc2e-11ee-bd36-005056bf30b7/w:1280/p:16x9/%E4%BC%97%E8%AE%AE%E9%99%A2%E8%AE%AE%E9%95%BF%E8%BF%88%E5%85%8B%E2%80%A7%E7%BA%A6%E7%BF%B0%E9%80%8A%EF%BC%88Mike%20Johnson%EF%BC%89.jpg"><p><strong>美国众议院议长约翰逊4月15日表示，本周将就援助乌克兰、以色列及台湾等法案进行独立投票，以推进多项立法。        </strong></p><div><p>数月以来，美国在欧洲的盟友和乌克兰领导人一直敦促美国国会授权向基辅提供更多援助，并警告说，如果没有美国的额外支持，乌克兰军队可能会在与俄罗斯军队的战斗中失去更多阵地。</p><p>周一晚间，美国国会众议长迈克‧约翰逊（Mike Johnson）在与众议院共和党议员会面时，提出了对四项独立法案进行投票的建议，其中包括为台湾提供资金、对伊朗实施更多制裁，以及允许乌克兰兑现被扣押的俄罗斯资产的法案。</p><p>约翰逊在会后说：“我们在世界各地都有像普京、习近平和伊朗这样的恐怖分子、暴君和可怕的领导人，他们都在关注美国是否会为其盟友和我们自己在全球的利益挺身而出，我们会的。”</p><p>“我们将就对以色列的援助、对乌克兰的援助、对印度-太平洋地区的援助进行投票。然后是另一项包含国家安全优先事项的措施，其中包括……对伊朗的其它制裁以及我们在此讨论已久的其它措施。”“这是一个优先事项，我确实希望本周内能完成这项工作。”</p><p>约翰逊承认说：“乌克兰问题显然是共和党方面争议最大的问题”，“我认为美国人民应该得到解释，为什么在这里提供援助符合美国人的利益。”</p><p>该方案将偏离参议院在今年2月通过的950亿美元援助方案，是否能在美国参众两院获得通过仍未可知。但约翰逊表示，将与众议院民主党领袖哈基姆‧杰弗里斯（Hakeem Jeffries）进行讨论，以争取支持。</p><p>他说：“我们将遵守72小时规则。这可能意味着，如果我们明天（4月16日）早些时候得到法案文本，那就可能是周五晚上（表决）了。”</p><p>这表明，在伊朗对美国在中东最亲密的盟友以色列发动袭击两天后，约翰逊正在采取行动，包括向乌克兰、以色列和台湾提供更多军事援助。</p><p>上周五（4月12日），约翰逊曾经前往海湖庄园（Mar-a-Lago）与前总统特朗普会晤。特朗普随后告诉媒体，他正在“研究”乌克兰援助法案。但直到本周一，特朗普尚未对约翰逊的最新提议发表评论。</p><p>美国众议员玛乔丽‧泰勒‧格林（Marjorie Taylor Greene）直言不讳地反对援助乌克兰，并威胁要把约翰逊赶下议长宝座。周一，约翰逊撇开了格林会因为他的最新提议而将他赶下台的说法。他说：“我不会把时间花在担心撤换动议上。”</p><p>周一晚间，白宫也没有立即对约翰逊的提议做出回应。周一早些时候，美国总统拜登在欢迎捷克总理彼得‧菲亚拉（Petr Fiala）访问华盛顿的讲话中呼吁国会就补充援助法案采取行动。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWU5.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240416-%25E7%25BE%258E%25E5%259B%25BD%25E4%25BC%2597%25E8%25AE%25AE%25E9%2599%25A2%25E6%259C%25AC%25E5%2591%25A8%25E6%2588%2596%25E5%25B0%25B1%25E6%258F%25B4%25E5%258A%25A9%25E4%25B9%258C%25E5%2585%258B%25E5%2585%25B0%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E5%258F%258A%25E5%258F%25B0%25E6%25B9%25BE%25E7%25AD%2589%25E6%25B3%2595%25E6%25A1%2588%25E8%25BF%259B%25E8%25A1%258C%25E7%258B%25AC%25E7%25AB%258B%25E6%258A%2595%25E7%25A5%25A8&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E5%9B%BD%E4%BC%97%E8%AE%AE%E9%99%A2%E6%9C%AC%E5%91%A8%E6%88%96%E5%B0%B1%E6%8F%B4%E5%8A%A9%E4%B9%8C%E5%85%8B%E5%85%B0%E4%BB%A5%E8%89%B2%E5%88%97%E5%8F%8A%E5%8F%B0%E6%B9%BE%E7%AD%89%E6%B3%95%E6%A1%88%E8%BF%9B%E8%A1%8C%E7%8B%AC%E7%AB%8B%E6%8A%95%E7%A5%A8%EF%BC%9F%20-%20https%3A%2F%2Frfi.my%2FAWU5.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E5%9B%BD%E4%BC%97%E8%AE%AE%E9%99%A2%E6%9C%AC%E5%91%A8%E6%88%96%E5%B0%B1%E6%8F%B4%E5%8A%A9%E4%B9%8C%E5%85%8B%E5%85%B0%E4%BB%A5%E8%89%B2%E5%88%97%E5%8F%8A%E5%8F%B0%E6%B9%BE%E7%AD%89%E6%B3%95%E6%A1%88%E8%BF%9B%E8%A1%8C%E7%8B%AC%E7%AB%8B%E6%8A%95%E7%A5%A8%EF%BC%9F%20-%20https%3A%2F%2Frfi.my%2FAWU5.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWU5.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E5%9B%BD%E4%BC%97%E8%AE%AE%E9%99%A2%E6%9C%AC%E5%91%A8%E6%88%96%E5%B0%B1%E6%8F%B4%E5%8A%A9%E4%B9%8C%E5%85%8B%E5%85%B0%E4%BB%A5%E8%89%B2%E5%88%97%E5%8F%8A%E5%8F%B0%E6%B9%BE%E7%AD%89%E6%B3%95%E6%A1%88%E8%BF%9B%E8%A1%8C%E7%8B%AC%E7%AB%8B%E6%8A%95%E7%A5%A8%EF%BC%9F&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
