--- a/articles/rfi/999973.md
+++ b/articles/rfi/999973.md
@@ -1,5 +1,5 @@
-<!--1713282301000-->
-[拜登夫妇公布报税资料如下](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240416-%E6%8B%9C%E7%99%BB%E5%A4%AB%E5%A6%87%E5%85%AC%E5%B8%83%E6%8A%A5%E7%A8%8E%E8%B5%84%E6%96%99%E5%A6%82%E4%B8%8B)
+<!--1713293102000-->
+[第77届戛纳电影节：导演双周公布片单 台湾影片《白衣苍狗》入选](https://www.rfi.fr/cn/%E6%B3%95%E5%9B%BD/20240416-%E7%AC%AC77%E5%B1%8A%E6%88%9B%E7%BA%B3%E7%94%B5%E5%BD%B1%E8%8A%82-%E5%AF%BC%E6%BC%94%E5%8F%8C%E5%91%A8%E5%85%AC%E5%B8%83%E7%89%87%E5%8D%95-%E5%8F%B0%E6%B9%BE%E5%BD%B1%E7%89%87-%E7%99%BD%E8%A1%A3%E8%8B%8D%E7%8B%97-%E5%85%A5%E9%80%89)
 ------
 
-<div>16/04/2024 - 17:26</div><img src="https://s.rfi.fr/media/display/de4dac9c-fa86-11ee-8398-005056bfb2b6/w:1280/p:16x9/AP24103786777136.jpg"><p><strong>根据美国总统拜登及第一夫人吉尔2023年报税资料，美国第一夫妇收入为61万9976美元，其中大部分来自总统的40万美元薪水，以及吉尔在附近维吉尼亚州一所大学任教的8万5985美元的薪水。        </strong></p><div><p>拜登夫妇公布报税资料即申报表，象征性延续了前任总统特朗普时期暂时中断、但展现白宫透明度的传统。</p><p>据法新社说，这个一年一度的不成文传统目的在于建立外界对白宫的信任，其他政治人物和候选人也经常这么做。</p><p>拜登夫妇2023年收入为61万9976美元。2022年拜登夫妇申报57万9514美元收入，2021年拜登申报61万702美元收入。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWRP.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240416-%25E6%258B%259C%25E7%2599%25BB%25E5%25A4%25AB%25E5%25A6%2587%25E5%2585%25AC%25E5%25B8%2583%25E6%258A%25A5%25E7%25A8%258E%25E8%25B5%2584%25E6%2596%2599%25E5%25A6%2582%25E4%25B8%258B&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%8B%9C%E7%99%BB%E5%A4%AB%E5%A6%87%E5%85%AC%E5%B8%83%E6%8A%A5%E7%A8%8E%E8%B5%84%E6%96%99%E5%A6%82%E4%B8%8B%20-%20https%3A%2F%2Frfi.my%2FAWRP.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%8B%9C%E7%99%BB%E5%A4%AB%E5%A6%87%E5%85%AC%E5%B8%83%E6%8A%A5%E7%A8%8E%E8%B5%84%E6%96%99%E5%A6%82%E4%B8%8B%20-%20https%3A%2F%2Frfi.my%2FAWRP.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWRP.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%8B%9C%E7%99%BB%E5%A4%AB%E5%A6%87%E5%85%AC%E5%B8%83%E6%8A%A5%E7%A8%8E%E8%B5%84%E6%96%99%E5%A6%82%E4%B8%8B&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>16/04/2024 - 16:58</div><img src="https://s.rfi.fr/media/display/979e33a6-fbef-11ee-bc3c-005056a97e36/w:1280/p:16x9/Sans%20titre%20%282%29-1.gif"><p><strong>继主竞赛单元、特别展映、戛纳首映、午夜展映、非竞赛单元和一种关注单元片单相继揭晓之后，第77届戛纳电影节平行单元之一的“导演双周”4月16日也正式公布入选片单，来自法国、美国、阿根廷、埃及等9部短片、22部长片入选。台湾导演曾威量和You Qiao Yin执导的首部长片《白衣苍狗》作为唯一一部华语片入选。        </strong></p><div><p>由法国导演工会1969年创办的导演双周是戛纳电影节平行的非竞赛单元，旨在鼓励和发掘新电影人，但每年的片单中也往往有一些知名导演入选。</p><p>导演双周的选片人Julien Rejl宣布，刚刚在去年去世的法国作者电影的标志性导演索菲-弗里尔斯（ Sophie Fillières ）的遗作《我的生活》 "Ma vie, ma gueule "将作为开幕片，该片由 Agnès Jaoui 主演。法国导演让-克里斯托弗-莫里斯执导的喜剧犯罪片《塑料枪》将作为闭幕片。比利时导演尚塔尔·阿克曼的《美国故事：食物、家庭和哲学》将作为特别展映。  </p><p>法国著名女演员伊莎贝尔-于佩尔（Isabelle Huppert）和哈夫西娅-赫兹（Hafsia Herzi）在法国女导演: 帕特里西亚·玛佐伊（Patricia Mazuy ）执导的影片 《波尔多的女囚》中饰演一对女权主义组合。</p><p>今年美国独立电影重回戛纳导演双周，尤其是由泰勒-陶尔米纳（Tyler Taormina）导演的《米勒角的平安夜》，影片汇集了米克尔-塞拉（Michael Cera）和好莱坞传奇人物弗朗西斯-斯科塞斯和索耶-斯皮尔伯格的子女等出演。</p><p>今年的导演双周片单包括了一些电影制作艰难的国家的影片。 其中有阿根廷导演埃尔南-罗塞利的影片《旧的、新的、借来的》 （Algo viejo、algo nuevo、algo prestado）。Julien Rejl表示，由于阿根廷总统米莱的极端自由主义政策，该国电影制作“岌岌可危"；片单中还包括了马赫迪-弗莱费尔（Mahdi Fleifel）的首部巴勒斯坦题材影片《前往未知之地》（"To a land unknown"），该片讲述了两个滞留雅典的巴勒斯坦表兄弟寻找前往德国之路的故事。</p><p>此外，还有一部由 Hala Elkoussy 拍摄的埃及电影《正午的东方》。Julien Rejl 称赞 "这位电影制作人的勇气，他表示，“埃及的审查制度从未如此严厉地打击电影制作人"。</p><p>2024戛纳电影节导演双周单元以日本著名演员北野武的一幅画作为官方海报，以此向北野武的诗意、幽默与滑稽致敬。1996年，北野武曾凭借《坏孩子的天空》入围戛纳导演双周单元。 </p><p> </p><p><strong>以下是2024年导演双周长片入选片单：</strong></p><p>1.    MA VIE MA GUEULE （我的生活）</p><p> 导演： 索菲 弗里尔斯（法国）（开幕片）</p><p>2.    À SON IMAGE（以他自己的形象）</p><p>导演：Thierry de Peretti（法国）</p><p>3.  CHRISTMAS EVE IN MILLER’S POINT （米勒角的圣诞夜 ）</p><p>导演：泰勒·陶尔米纳（美国）</p><p>4.  DESERT OF NAMIBIA（纳米比亚沙漠 ） </p><p>导演：山中洋子（日本）</p><p>5. EAST OF NOON（正午东部） </p><p>导演：Hala Elkoussy（埃及）</p><p>6. EAT THE NIGHT（晚上就餐） </p><p>导演：Caroline Poggi 和 Jonathan Vinel（法国）</p><p>7.  EEPHUS（埃菲斯）</p><p>导演：卡森·隆德（美国）（首部长片）</p><p> 8. GAZER （气体） </p><p>导演：瑞安·J·斯隆（美国）（首部长片）</p><p>9.  GHOST CAT ANZU  （鬼猫） </p><p>导演：Yôko Kuno 和 Nobuhiro Yamashita（日本）</p><p>10. GOOD ONE （好人）</p><p> 导演：印地·唐纳森（美国）（首部长片）</p><p>11. MONGREL  (白衣苍狗)</p><p> 导演：曾威量和 &You Qiao Yi（台湾） （首部长片）</p><p>12. LA PRISONNIÈRE DE BORDEAUX（波尔多的女囚）</p><p> 导演：Patricia Mazuy（法国）</p><p>13.SAVANNA AND THE MOUNTAIN （稀树草原和山） </p><p> 导演：保罗·卡内罗（葡萄牙）</p><p>14. SISTER MIDNIGHT （午夜修女 ）</p><p> 导演：Karan Kandhari（印度）</p><p>15. SOMETHING OLD, SOMETHING NEW, SOMETHING BORROWED （旧的、新的、借来的） </p><p>导演：埃尔南·罗塞利（阿根廷）</p><p>16. THE FALLING SKY（坠落的天空） </p><p>导演：Eryk Rocha 和 Gabriela Carneiro da Cunha（巴西）</p><p>17.  THE HYPERBOREANS  </p><p>导演：Cristóbal León 和 Joaquín Cociña（智利）</p><p> 18.T HE OTHER WAY AROUND（另一种方式）</p><p> 导演：乔纳斯·特鲁埃瓦（西班牙）</p><p>19. TO A LAND UNKNOWN （前往未知的土地 ）</p><p>导演：Mahdi Fleifel（巴勒斯坦、丹麦）</p><p>20. A UNIVERSAL LANGUAGE （通用语言） </p><p>导演：马修·兰金（加拿大）</p><p>21.  LES PISTOLETS EN PLASTIQUE （塑料枪）</p><p>导演：Jean-Christophe Meurisse（法国）（ 闭幕影片）</p><p>22.特别展映影片： </p><p>HISTOIRES D’AMÉRIQUE : FOOD, FAMILY AND PHILOSOPHY （美国故事：食物、家庭和哲学 ）</p><p>导演：尚塔尔·阿克曼（比利时）</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWQz.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25B3%2595%25E5%259B%25BD%2F20240416-%25E7%25AC%25AC77%25E5%25B1%258A%25E6%2588%259B%25E7%25BA%25B3%25E7%2594%25B5%25E5%25BD%25B1%25E8%258A%2582-%25E5%25AF%25BC%25E6%25BC%2594%25E5%258F%258C%25E5%2591%25A8%25E5%2585%25AC%25E5%25B8%2583%25E7%2589%2587%25E5%258D%2595-%25E5%258F%25B0%25E6%25B9%25BE%25E5%25BD%25B1%25E7%2589%2587-%25E7%2599%25BD%25E8%25A1%25A3%25E8%258B%258D%25E7%258B%2597-%25E5%2585%25A5%25E9%2580%2589&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%AC%AC77%E5%B1%8A%E6%88%9B%E7%BA%B3%E7%94%B5%E5%BD%B1%E8%8A%82%EF%BC%9A%E5%AF%BC%E6%BC%94%E5%8F%8C%E5%91%A8%E5%85%AC%E5%B8%83%E7%89%87%E5%8D%95%20%E5%8F%B0%E6%B9%BE%E5%BD%B1%E7%89%87%E3%80%8A%E7%99%BD%E8%A1%A3%E8%8B%8D%E7%8B%97%E3%80%8B%E5%85%A5%E9%80%89%20-%20https%3A%2F%2Frfi.my%2FAWQz.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%AC%AC77%E5%B1%8A%E6%88%9B%E7%BA%B3%E7%94%B5%E5%BD%B1%E8%8A%82%EF%BC%9A%E5%AF%BC%E6%BC%94%E5%8F%8C%E5%91%A8%E5%85%AC%E5%B8%83%E7%89%87%E5%8D%95%20%E5%8F%B0%E6%B9%BE%E5%BD%B1%E7%89%87%E3%80%8A%E7%99%BD%E8%A1%A3%E8%8B%8D%E7%8B%97%E3%80%8B%E5%85%A5%E9%80%89%20-%20https%3A%2F%2Frfi.my%2FAWQz.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWQz.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%AC%AC77%E5%B1%8A%E6%88%9B%E7%BA%B3%E7%94%B5%E5%BD%B1%E8%8A%82%EF%BC%9A%E5%AF%BC%E6%BC%94%E5%8F%8C%E5%91%A8%E5%85%AC%E5%B8%83%E7%89%87%E5%8D%95%20%E5%8F%B0%E6%B9%BE%E5%BD%B1%E7%89%87%E3%80%8A%E7%99%BD%E8%A1%A3%E8%8B%8D%E7%8B%97%E3%80%8B%E5%85%A5%E9%80%89&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
