--- a/articles/rfi/999978.md
+++ b/articles/rfi/999978.md
@@ -1,5 +1,5 @@
-<!--1713278702000-->
-[中国烂尾楼新招：或成立公司收购](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240416-%E4%B8%AD%E5%9B%BD%E7%83%82%E5%B0%BE%E6%A5%BC%E6%96%B0%E6%8B%9B-%E6%88%96%E6%88%90%E7%AB%8B%E5%85%AC%E5%8F%B8%E6%94%B6%E8%B4%AD)
+<!--1713282301000-->
+[拜登夫妇公布报税资料如下](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240416-%E6%8B%9C%E7%99%BB%E5%A4%AB%E5%A6%87%E5%85%AC%E5%B8%83%E6%8A%A5%E7%A8%8E%E8%B5%84%E6%96%99%E5%A6%82%E4%B8%8B)
 ------
 
-<div>16/04/2024 - 16:21</div><img src="https://s.rfi.fr/media/display/3a3b1afa-d8d9-11ee-856e-005056a97e36/w:1280/p:16x9/chine%20contruction%20immobilier%20251113_1-1.png"><p><strong>中国高层传正在考虑建立一个全国性的房地产平台公司，负责收购各地烂尾楼，然后将烂尾楼转变为保障性住房。不过，分析警告这种方案也面临财源等一连串挑战。        </strong></p><div><p>据中央社今天引述财新传媒旗下新媒体“金融我闻”15日消息，日前访问中国的美国财长叶伦（Janet Yellen）6日与中国国务院副总理何立峰会谈结束后，有外媒披露，叶伦说，中国将采取“重大举措”解决房地产问题。</p><p>该披露说，所谓重大举措，除了今年1月初推出的“城市房地产融资协调机制”（俗称房地产“白名单”），也可能包括考虑借鉴日本经验，建立一个全国性的房地产平台公司，负责收购各地烂尾楼。这些购来的房子将被打造为保障性住房（社会住宅），对外出售或出租。</p><p>消息引述金融机构人士说，当前中国的房价仍处于下行通道，房价何时能见底还是未知数；“国家队”此时如果能够下场收购，一定程度上利于稳定房价。</p><p>这名人士并认为，相较于地方政府自行引入政府平台公司或地方国资参与收购，会面临由哪个主管部门定出规则或做出判断、要接收哪些房企的建案等一系列问题，成立全国性平台公司来运作，至少有统一的机构可以直接确定各项事宜。</p><p>不过，也有业内人士表示，这个全国性平台公司一旦成立，并介入收购现有问题建案，将遭遇一连串挑战，比如：钱从哪来、如何制定收购标准、后续如何运营收购来的房源，实务中又该如何把控好各环节中潜藏的道德风险等。</p><p>据该报道，有关由政府“收购”烂尾楼转作保障房的做法，今年以来在中国不乏有经济学者呼应。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWQS.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240416-%25E4%25B8%25AD%25E5%259B%25BD%25E7%2583%2582%25E5%25B0%25BE%25E6%25A5%25BC%25E6%2596%25B0%25E6%258B%259B-%25E6%2588%2596%25E6%2588%2590%25E7%25AB%258B%25E5%2585%25AC%25E5%258F%25B8%25E6%2594%25B6%25E8%25B4%25AD&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%B8%AD%E5%9B%BD%E7%83%82%E5%B0%BE%E6%A5%BC%E6%96%B0%E6%8B%9B%EF%BC%9A%E6%88%96%E6%88%90%E7%AB%8B%E5%85%AC%E5%8F%B8%E6%94%B6%E8%B4%AD%20-%20https%3A%2F%2Frfi.my%2FAWQS.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%B8%AD%E5%9B%BD%E7%83%82%E5%B0%BE%E6%A5%BC%E6%96%B0%E6%8B%9B%EF%BC%9A%E6%88%96%E6%88%90%E7%AB%8B%E5%85%AC%E5%8F%B8%E6%94%B6%E8%B4%AD%20-%20https%3A%2F%2Frfi.my%2FAWQS.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWQS.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%B8%AD%E5%9B%BD%E7%83%82%E5%B0%BE%E6%A5%BC%E6%96%B0%E6%8B%9B%EF%BC%9A%E6%88%96%E6%88%90%E7%AB%8B%E5%85%AC%E5%8F%B8%E6%94%B6%E8%B4%AD&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>16/04/2024 - 17:26</div><img src="https://s.rfi.fr/media/display/de4dac9c-fa86-11ee-8398-005056bfb2b6/w:1280/p:16x9/AP24103786777136.jpg"><p><strong>根据美国总统拜登及第一夫人吉尔2023年报税资料，美国第一夫妇收入为61万9976美元，其中大部分来自总统的40万美元薪水，以及吉尔在附近维吉尼亚州一所大学任教的8万5985美元的薪水。        </strong></p><div><p>拜登夫妇公布报税资料即申报表，象征性延续了前任总统特朗普时期暂时中断、但展现白宫透明度的传统。</p><p>据法新社说，这个一年一度的不成文传统目的在于建立外界对白宫的信任，其他政治人物和候选人也经常这么做。</p><p>拜登夫妇2023年收入为61万9976美元。2022年拜登夫妇申报57万9514美元收入，2021年拜登申报61万702美元收入。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWRP.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240416-%25E6%258B%259C%25E7%2599%25BB%25E5%25A4%25AB%25E5%25A6%2587%25E5%2585%25AC%25E5%25B8%2583%25E6%258A%25A5%25E7%25A8%258E%25E8%25B5%2584%25E6%2596%2599%25E5%25A6%2582%25E4%25B8%258B&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%8B%9C%E7%99%BB%E5%A4%AB%E5%A6%87%E5%85%AC%E5%B8%83%E6%8A%A5%E7%A8%8E%E8%B5%84%E6%96%99%E5%A6%82%E4%B8%8B%20-%20https%3A%2F%2Frfi.my%2FAWRP.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%8B%9C%E7%99%BB%E5%A4%AB%E5%A6%87%E5%85%AC%E5%B8%83%E6%8A%A5%E7%A8%8E%E8%B5%84%E6%96%99%E5%A6%82%E4%B8%8B%20-%20https%3A%2F%2Frfi.my%2FAWRP.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWRP.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%8B%9C%E7%99%BB%E5%A4%AB%E5%A6%87%E5%85%AC%E5%B8%83%E6%8A%A5%E7%A8%8E%E8%B5%84%E6%96%99%E5%A6%82%E4%B8%8B&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
