--- a/articles/rfi/999981.md
+++ b/articles/rfi/999981.md
@@ -1,5 +1,5 @@
-<!--1713273301000-->
-[美媒：拜登报复伊朗的选择可能会激怒中国](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240416-%E7%BE%8E%E5%AA%92-%E6%8B%9C%E7%99%BB%E6%8A%A5%E5%A4%8D%E4%BC%8A%E6%9C%97%E7%9A%84%E9%80%89%E6%8B%A9%E5%8F%AF%E8%83%BD%E4%BC%9A%E6%BF%80%E6%80%92%E4%B8%AD%E5%9B%BD)
+<!--1713278703000-->
+[美国大使抵访韩朝边境 敦促俄中不要“奖励”朝鲜的不良行为](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240416-%E7%BE%8E%E5%9B%BD%E5%A4%A7%E4%BD%BF%E6%8A%B5%E8%AE%BF%E9%9F%A9%E6%9C%9D%E8%BE%B9%E5%A2%83-%E6%95%A6%E4%BF%83%E4%BF%84%E4%B8%AD%E4%B8%8D%E8%A6%81-%E5%A5%96%E5%8A%B1-%E6%9C%9D%E9%B2%9C%E7%9A%84%E4%B8%8D%E8%89%AF%E8%A1%8C%E4%B8%BA)
 ------
 
-<div>16/04/2024 - 15:02</div><img src="https://s.rfi.fr/media/display/20aa3036-f8db-11ee-8af8-005056bf30b7/w:1280/p:16x9/POLLUTION%20AIR.jpg"><p><strong>美国总统拜登的助手正准备因德黑兰袭击以色列而对伊朗实施经济制裁，但专家表示，在不激怒中国或冒油价飙升风险的情况下，他们面临的有意义的选择有限。        </strong></p><div><p>据华盛顿邮报今天报道称，为了报复对伊朗领事馆的袭击，伊朗周末向以色列发射了 300 多架无人机和导弹。但史无前例的空中拦截并未造成重大损失或人员伤亡，美国领导的部队拦截了大部分炮弹。</p><p>尽管如此，随着西方主要官员周一齐聚华盛顿参加国际货币基金组织和世界银行春季会议，美国官员及其欧洲盟友正在讨论对伊朗采取的潜在经济对策。他们的选择很有限，因为伊朗已经是世界上受制裁最严重的国家之一，美国对伊朗银行、制造业和能源部门都实施了惩罚。</p><p>剩下的最明显的选择之一是积极扩大对购买大量伊朗原油出口的中国公司的制裁，这些公司为德黑兰提供了金融生命线，因为伊朗仍然与西方隔绝。去年，美国对中国和伊朗之间石油贸易中的一些商业联系实施了制裁，但专家表示，美国政府可能会采取进一步措施，对更多的中国炼油厂和银行实施限制。</p><p>然而，这样做也有其自身的风险。近几个月来，财政部长耶伦和其他政府官员一直在努力稳定与中国的关系，能源生产的突然打击可能会激怒北京。此外，在供应紧张的情况下，切断伊朗原油的销售可能会导致全球油价飙升，并可能导致 2024 年总统大选前的天然气价格上涨。</p><p>外交政策智库新美国安全中心兼职高级研究员雷切尔·齐姆巴表示：“能够改变游戏规则的选择并不多，因为伊朗大部分地区已经受到制裁。” “但如果你真的想切断伊朗的石油收入，你必须瞄准中国和中国机构。”</p><p>制裁为购买伊朗石油提供便利的中国银行可能会导致全球市场每天减少多达 150 万桶石油。咨询公司拉皮丹能源集团总裁鲍勃·麦克纳利表示，这将使石油价格突破每桶 100 美元，这对拜登政府来说将是一场政治噩梦。“拜登最不想要的就是天然气价格上涨，所以他希望伊朗向中国出售石油。他不希望石油被关闭。就这么简单；他无力制裁伊朗石油，”麦克纳利说。 “他们可以做一些象征性的事情，去追捕这里或那里的小商人，但很可能就是这样。”</p><p>据该报道称，拜登在伊朗袭击后敦促保持冷静。美国已明确表示不会参与以色列对伊朗的任何军事袭击，美国高级官员强调，他们的目标是“缓和地区紧张局势”，防止更广泛的冲突。</p><p>以色列战时内阁周一召开会议，商讨可能的应对措施。</p><p>虽然西方排除了参与军事反应的可能性，但对伊朗行动的经济制裁似乎越来越确定。欧盟委员会主席冯德莱恩表示，布鲁塞尔官员将讨论对伊朗实施更严厉的制裁。她在一份声明中表示：“我们将与我们的合作伙伴密切合作，考虑对伊朗实施进一步的制裁。”</p><p>例如，据两位不愿透露姓名的知情人士透露，美国官员已经讨论了收紧伊朗获得用于人道主义救援的冻结资金的问题。他们还讨论了对伊朗官员和企业实施额外制裁。第一个可能在很大程度上具有象征意义：伊朗已经很难获得这些资金。目前还不清楚对其他公司（例如伊朗无人机零部件国际供应商）的制裁将产生多大影响。</p><p>拜登政府还面临国会山采取行动的压力。众议院周一以压倒性多数通过了旨在打击伊朗向中国出售石油的立法。议会批评者认为，拜登应该进一步确保德黑兰无法从石油出口中获得数十亿美元。</p><p>不过，其他专家表示，挑战在于华盛顿对德黑兰的态度已经过于激进。自特朗普政府放弃总统奥巴马达成的核协议以来，伊朗一直受到严格的经济限制，这使得政策制定者在面对新的紧急情况时几乎没有操作的空间。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWP7.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240416-%25E7%25BE%258E%25E5%25AA%2592-%25E6%258B%259C%25E7%2599%25BB%25E6%258A%25A5%25E5%25A4%258D%25E4%25BC%258A%25E6%259C%2597%25E7%259A%2584%25E9%2580%2589%25E6%258B%25A9%25E5%258F%25AF%25E8%2583%25BD%25E4%25BC%259A%25E6%25BF%2580%25E6%2580%2592%25E4%25B8%25AD%25E5%259B%25BD&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E5%AA%92%EF%BC%9A%E6%8B%9C%E7%99%BB%E6%8A%A5%E5%A4%8D%E4%BC%8A%E6%9C%97%E7%9A%84%E9%80%89%E6%8B%A9%E5%8F%AF%E8%83%BD%E4%BC%9A%E6%BF%80%E6%80%92%E4%B8%AD%E5%9B%BD%20-%20https%3A%2F%2Frfi.my%2FAWP7.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E5%AA%92%EF%BC%9A%E6%8B%9C%E7%99%BB%E6%8A%A5%E5%A4%8D%E4%BC%8A%E6%9C%97%E7%9A%84%E9%80%89%E6%8B%A9%E5%8F%AF%E8%83%BD%E4%BC%9A%E6%BF%80%E6%80%92%E4%B8%AD%E5%9B%BD%20-%20https%3A%2F%2Frfi.my%2FAWP7.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWP7.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E5%AA%92%EF%BC%9A%E6%8B%9C%E7%99%BB%E6%8A%A5%E5%A4%8D%E4%BC%8A%E6%9C%97%E7%9A%84%E9%80%89%E6%8B%A9%E5%8F%AF%E8%83%BD%E4%BC%9A%E6%BF%80%E6%80%92%E4%B8%AD%E5%9B%BD&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>16/04/2024 - 15:53</div><img src="https://s.rfi.fr/media/display/d9cbf072-6bba-11ed-9d99-005056bf30b7/w:1280/p:16x9/AP22313661331641.jpg"><p><strong>美国驻联合国大使周二敦促俄罗斯和中国改弦更张，停止奖励朝鲜的不良行为，并阻止朝鲜因武器计划而逃避制裁。        </strong></p><div><p>美国驻联合国特使敦促俄罗斯和中国不要“奖励”朝鲜的不良行为。美国驻联合国大使琳达·托马斯·格林菲尔德于 2024 年 4 月 16 日在韩国板门店休战村附近的坡州博尼法斯美军基地向记者发表讲话时发表上述言论。</p><p>琳达·托马斯·格林菲尔德大使访问了韩朝边境非军事区，非军事区是朝韩两国之间戒备森严的边界，路透社今天报道称，严格来说，两国仍处于交战状态。</p><p>在她访问韩国之前，俄罗斯拒绝了多国专家小组的年度更新，该小组在过去15年里一直监督联合国旨在遏制朝鲜核计划和导弹计划的制裁措施的执行情况。</p><p>托马斯-格林菲尔德表示，莫斯科的否决和中国的弃权只会“增强”朝鲜规避国际制裁的做法，并“保护”朝鲜免受问责。</p><p>她告诉记者，“隐藏真相并不能改变事实。奖励不良行为只会鼓励这种行为。”她说， “我们敦促俄罗斯和中国改弦更张，并再次敦促平壤选择外交手段，来到谈判桌前致力于建设性对话。”</p><p>据格林菲尔德表示，华盛顿将与韩国、日本和安理会其他伙伴合作，寻找“一些创造性的方式、一些创造性的思维”，以继续监督制裁的执行和该小组开展的其他工作说。</p><p>后来在首尔，她会见了一群年轻的朝鲜叛逃者，称赞他们逃往韩国“勇敢、鼓舞人心”。她告诉他们：“我的首要任务之一是让世界知道朝鲜侵犯人权行为，提高人们对逃亡者的关注度并扩大逃亡者的声音。”她指的是朝鲜官方名称“民主人民共和国”的首字母缩写。</p><p>托马斯-格林菲尔德于周日抵达，并于周一会见了韩国总统尹锡悦以及首尔外交部长和国防部长，讨论如何阻止朝鲜的武器计划并在这个与世隔绝的国家促进人权。</p><p>美国大使还将前往日本，预计会见2000年代初被朝鲜绑架的日本公民的家人，并访问1945年遭到美国核弹袭击的长崎，直到周六。</p><p>据路透社说，韩国和日本都是美国的盟友，目前均是安理会成员。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWQ0.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240416-%25E7%25BE%258E%25E5%259B%25BD%25E5%25A4%25A7%25E4%25BD%25BF%25E6%258A%25B5%25E8%25AE%25BF%25E9%259F%25A9%25E6%259C%259D%25E8%25BE%25B9%25E5%25A2%2583-%25E6%2595%25A6%25E4%25BF%2583%25E4%25BF%2584%25E4%25B8%25AD%25E4%25B8%258D%25E8%25A6%2581-%25E5%25A5%2596%25E5%258A%25B1-%25E6%259C%259D%25E9%25B2%259C%25E7%259A%2584%25E4%25B8%258D%25E8%2589%25AF%25E8%25A1%258C%25E4%25B8%25BA&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E5%9B%BD%E5%A4%A7%E4%BD%BF%E6%8A%B5%E8%AE%BF%E9%9F%A9%E6%9C%9D%E8%BE%B9%E5%A2%83%20%E6%95%A6%E4%BF%83%E4%BF%84%E4%B8%AD%E4%B8%8D%E8%A6%81%E2%80%9C%E5%A5%96%E5%8A%B1%E2%80%9D%E6%9C%9D%E9%B2%9C%E7%9A%84%E4%B8%8D%E8%89%AF%E8%A1%8C%E4%B8%BA%20-%20https%3A%2F%2Frfi.my%2FAWQ0.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E5%9B%BD%E5%A4%A7%E4%BD%BF%E6%8A%B5%E8%AE%BF%E9%9F%A9%E6%9C%9D%E8%BE%B9%E5%A2%83%20%E6%95%A6%E4%BF%83%E4%BF%84%E4%B8%AD%E4%B8%8D%E8%A6%81%E2%80%9C%E5%A5%96%E5%8A%B1%E2%80%9D%E6%9C%9D%E9%B2%9C%E7%9A%84%E4%B8%8D%E8%89%AF%E8%A1%8C%E4%B8%BA%20-%20https%3A%2F%2Frfi.my%2FAWQ0.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWQ0.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E5%9B%BD%E5%A4%A7%E4%BD%BF%E6%8A%B5%E8%AE%BF%E9%9F%A9%E6%9C%9D%E8%BE%B9%E5%A2%83%20%E6%95%A6%E4%BF%83%E4%BF%84%E4%B8%AD%E4%B8%8D%E8%A6%81%E2%80%9C%E5%A5%96%E5%8A%B1%E2%80%9D%E6%9C%9D%E9%B2%9C%E7%9A%84%E4%B8%8D%E8%89%AF%E8%A1%8C%E4%B8%BA&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
