--- a/articles/rfi/999982.md
+++ b/articles/rfi/999982.md
@@ -1,5 +1,5 @@
-<!--1713273301000-->
-[菲律宾总统欢迎日本自卫队从明年起参加美菲“肩并肩”等联合军演](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240416-%E8%8F%B2%E5%BE%8B%E5%AE%BE%E6%80%BB%E7%BB%9F%E6%AC%A2%E8%BF%8E%E6%97%A5%E6%9C%AC%E8%87%AA%E5%8D%AB%E9%98%9F%E4%BB%8E%E6%98%8E%E5%B9%B4%E8%B5%B7%E5%8F%82%E5%8A%A0%E7%BE%8E%E8%8F%B2-%E8%82%A9%E5%B9%B6%E8%82%A9-%E7%AD%89%E8%81%94%E5%90%88%E5%86%9B%E6%BC%94)
+<!--1713278703000-->
+[朔尔兹访问有牛肉成果：中国解禁了](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240416-%E6%9C%94%E5%B0%94%E5%85%B9%E8%AE%BF%E9%97%AE%E6%9C%89%E7%89%9B%E8%82%89%E6%88%90%E6%9E%9C-%E4%B8%AD%E5%9B%BD%E8%A7%A3%E7%A6%81%E4%BA%86)
 ------
 
-<div>16/04/2024 - 15:00</div><img src="https://s.rfi.fr/media/display/9bebb08e-b471-11ee-94ac-005056bf30b7/w:1280/p:16x9/AP24015603830995.jpg"><p><strong>菲律宾总统马科斯4月15日欢迎日本自卫队从明年起正式参加美菲两军实施的“肩并肩”等联合演习，：“我认为日本参加是很好的行动”。        </strong></p><div><p>共同社报道，提到中国，马科斯谴责称，最近菲律宾在南海“遭受了非法的、攻击性的不负责任行为”。他表示对日本自卫队正式参加美菲联合演习“没有异议”，强调日美菲朝着“维护和平稳定与航行自由，彻底遵守国际法”的目标，“能够最大限度地运用所拥有的力量”。</p><p>马科斯11日出席了在美国华盛顿召开的日美菲三国首脑会谈，就设立人道主义援助和应对灾害的三国演习达成共识，发布声明，明年三国演习将加入美菲“肩并肩”等联合演习中。</p><p>在记者会上，马科斯就方便日本自卫队参加联合演习的日菲间的《互惠准入协定》（RAA）透露说，谈判没有争议点，预计很快就能签署。</p><p>“肩并肩”是美菲两军每年举行的最大规模演习。今年将于4月22日至5月10日实施，预计约1.7万名官兵参加。马科斯指出：“计划首次举行网络安全保障与指挥统制训练，将是最复杂、规模最大的演习。”</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWP1.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240416-%25E8%258F%25B2%25E5%25BE%258B%25E5%25AE%25BE%25E6%2580%25BB%25E7%25BB%259F%25E6%25AC%25A2%25E8%25BF%258E%25E6%2597%25A5%25E6%259C%25AC%25E8%2587%25AA%25E5%258D%25AB%25E9%2598%259F%25E4%25BB%258E%25E6%2598%258E%25E5%25B9%25B4%25E8%25B5%25B7%25E5%258F%2582%25E5%258A%25A0%25E7%25BE%258E%25E8%258F%25B2-%25E8%2582%25A9%25E5%25B9%25B6%25E8%2582%25A9-%25E7%25AD%2589%25E8%2581%2594%25E5%2590%2588%25E5%2586%259B%25E6%25BC%2594&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%8F%B2%E5%BE%8B%E5%AE%BE%E6%80%BB%E7%BB%9F%E6%AC%A2%E8%BF%8E%E6%97%A5%E6%9C%AC%E8%87%AA%E5%8D%AB%E9%98%9F%E4%BB%8E%E6%98%8E%E5%B9%B4%E8%B5%B7%E5%8F%82%E5%8A%A0%E7%BE%8E%E8%8F%B2%E2%80%9C%E8%82%A9%E5%B9%B6%E8%82%A9%E2%80%9D%E7%AD%89%E8%81%94%E5%90%88%E5%86%9B%E6%BC%94%20-%20https%3A%2F%2Frfi.my%2FAWP1.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%8F%B2%E5%BE%8B%E5%AE%BE%E6%80%BB%E7%BB%9F%E6%AC%A2%E8%BF%8E%E6%97%A5%E6%9C%AC%E8%87%AA%E5%8D%AB%E9%98%9F%E4%BB%8E%E6%98%8E%E5%B9%B4%E8%B5%B7%E5%8F%82%E5%8A%A0%E7%BE%8E%E8%8F%B2%E2%80%9C%E8%82%A9%E5%B9%B6%E8%82%A9%E2%80%9D%E7%AD%89%E8%81%94%E5%90%88%E5%86%9B%E6%BC%94%20-%20https%3A%2F%2Frfi.my%2FAWP1.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWP1.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%8F%B2%E5%BE%8B%E5%AE%BE%E6%80%BB%E7%BB%9F%E6%AC%A2%E8%BF%8E%E6%97%A5%E6%9C%AC%E8%87%AA%E5%8D%AB%E9%98%9F%E4%BB%8E%E6%98%8E%E5%B9%B4%E8%B5%B7%E5%8F%82%E5%8A%A0%E7%BE%8E%E8%8F%B2%E2%80%9C%E8%82%A9%E5%B9%B6%E8%82%A9%E2%80%9D%E7%AD%89%E8%81%94%E5%90%88%E5%86%9B%E6%BC%94&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>16/04/2024 - 15:40</div><img src="https://s.rfi.fr/media/display/74f0a62c-fbea-11ee-b94f-005056bfb2b6/w:1280/p:16x9/GLQX5FyWAAAdFuC.gif"><p><strong>德国总理朔尔茨在访问北京期间敦促中国同行改善市场准入后，中国海关当局周二表示，中国已解除对部分德国牛肉进口的禁令。        </strong></p><div><p> </p><p>中国今天解除部分德国牛肉进口禁令。中国此前以防止疯牛病的理由对德国牛肉实行进口禁令。</p><p>据路透社今天引述​中国海关总署在微信中表示，这一放宽政策适用于从德国进口的30个月以下小牛的去骨牛肉。</p><p>中国官方说，该变更自4月16日（即公告之日）起生效。</p><p>据朔尔茨周二表示，中国还同意对从德国进口的牛肉和苹果开放边境，并为猪肉进口提供便利。</p><p>朔尔茨是在为期三天的中国之行的最后一天发表上述言论的，期间他会见了中国国家主席习近平，并向中国同行施压，要求提供更好的市场准入，并表示德国不想与中国“脱钩”。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWPl.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240416-%25E6%259C%2594%25E5%25B0%2594%25E5%2585%25B9%25E8%25AE%25BF%25E9%2597%25AE%25E6%259C%2589%25E7%2589%259B%25E8%2582%2589%25E6%2588%2590%25E6%259E%259C-%25E4%25B8%25AD%25E5%259B%25BD%25E8%25A7%25A3%25E7%25A6%2581%25E4%25BA%2586&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%9C%94%E5%B0%94%E5%85%B9%E8%AE%BF%E9%97%AE%E6%9C%89%E7%89%9B%E8%82%89%E6%88%90%E6%9E%9C%EF%BC%9A%E4%B8%AD%E5%9B%BD%E8%A7%A3%E7%A6%81%E4%BA%86%20-%20https%3A%2F%2Frfi.my%2FAWPl.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%9C%94%E5%B0%94%E5%85%B9%E8%AE%BF%E9%97%AE%E6%9C%89%E7%89%9B%E8%82%89%E6%88%90%E6%9E%9C%EF%BC%9A%E4%B8%AD%E5%9B%BD%E8%A7%A3%E7%A6%81%E4%BA%86%20-%20https%3A%2F%2Frfi.my%2FAWPl.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWPl.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%9C%94%E5%B0%94%E5%85%B9%E8%AE%BF%E9%97%AE%E6%9C%89%E7%89%9B%E8%82%89%E6%88%90%E6%9E%9C%EF%BC%9A%E4%B8%AD%E5%9B%BD%E8%A7%A3%E7%A6%81%E4%BA%86&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
