--- a/articles/rfi/999985.md
+++ b/articles/rfi/999985.md
@@ -1,5 +1,5 @@
-<!--1713267901000-->
-[德中首脑会 法新着重朔尔茨盼对乌的公正和平 官媒强调习近平称互不构成安全威胁 - 要闻解说](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E8%A6%81%E9%97%BB%E8%A7%A3%E8%AF%B4/20240416-%E5%BE%B7%E4%B8%AD%E9%A6%96%E8%84%91%E4%BC%9A-%E6%B3%95%E6%96%B0%E7%9D%80%E9%87%8D%E6%9C%94%E5%B0%94%E8%8C%A8%E7%9B%BC%E5%AF%B9%E4%B9%8C%E5%85%8B%E5%85%B0%E7%9A%84%E5%85%AC%E6%AD%A3%E5%92%8C%E5%B9%B3-%E5%AE%98%E5%AA%92%E5%BC%BA%E8%B0%83%E4%B9%A0%E8%BF%91%E5%B9%B3%E7%A7%B0%E4%BA%92%E4%B8%8D%E6%9E%84%E6%88%90%E5%AE%89%E5%85%A8%E5%A8%81%E8%83%81)
+<!--1713275107000-->
+[哥本哈根证券交易所失火 楼顶尖塔烧塌](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240416-%E5%93%A5%E6%9C%AC%E5%93%88%E6%A0%B9%E8%AF%81%E5%88%B8%E4%BA%A4%E6%98%93%E6%89%80%E5%A4%B1%E7%81%AB-%E6%A5%BC%E9%A1%B6%E5%B0%96%E5%A1%94%E7%83%A7%E5%A1%8C)
 ------
 
-<div>16/04/2024 - 13:14</div><img src="https://s.rfi.fr/media/display/db3c9280-fbd4-11ee-b9b2-005056a97e36/w:1280/p:16x9/2024-04-16T092011Z_1344172512_RC2K77AQBNR7_RTRMADP_3_CHINA-GERMANY.JPG"><p><strong>中国国家主席习近平16日与到访的德国总理朔尔茨（Olaf Scholz）会晤。中国媒体报道强调出习近平表示，中徳互不构成安全威胁，并指中国出口产品缓解全球通胀压力。法新社报则着重朔尔茨提及乌俄战争，盼双方对乌克兰公正的和平做出更多贡献。                    </strong></p><div><p>朔尔茨本月14日抵达重庆，开启任内第2次访华。在会晤习近平前，朔尔茨先后访问重庆和上海，期间参观氢动力生产设施，以及德国化工巨头科思创在当地的绿色和可持续技术研发基地。</p><p>据法新社今天16日报道称，德国总理今访北京，朔尔茨面临着一个德国对中国政策平衡的问题。他打算加强德国与德国主要贸易伙伴中国的经济联系，同时代表欧盟希望减少在经济上对这个亚洲巨人的依赖。</p><p>外界注意到，肖尔茨昨天参访上海同济大学时，曾透露他对欧洲进口中国汽车的观点。他认为，欧洲市场对中国汽车应开放且公平，但重要的前提是必须维持公平竞争，即“不倾销，不生产过剩与不侵权”。</p><p style="text-align:start">朔尔茨今天在北京钓鱼台外交大楼与习近平会面，据他的随团官员透露，他要与习近平讨论如何“进一步为乌克兰公正的和平做出贡献”。法新社早些时候报导指，朔尔茨在社群媒体平台X（前推特）上发文表示：“我与习主席的会面还将重点讨论如何为乌克兰公正的和平做出更多贡献。”</p><p style="text-align:start">在乌克兰危机上，中国呼吁对话，反对使用核武器，并敦促尊重“所有国家”的领土完整，该报道解读称这意味着乌克兰也包括在内。但北京从未公开谴责莫斯科入侵乌克兰，中国经常呼吁考虑各方的安全关切，包括俄罗斯对北约的安全关切。</p><p style="text-align:start">按照德国总理办公室提供的对话文件，朔尔茨对习近平说：“俄罗斯对乌克兰的侵略战争和俄罗斯的武装对欧洲安全产生了非常重大的负面影响。” 朔尔兹称“它们直接影响我们的根本利益。” 同时“它们间接损害了整个国际秩序，因为它们违反了《联合国宪章》的一项原则即国家边界不可侵犯的原则。”</p><p style="text-align:start">十多年来，中国和俄罗斯的关系日益密切，因为两国在国际舞台上共同谴责西方霸权。</p><p style="text-align:start">自乌克兰战争爆发以来，中国与俄罗斯两国加强了经济、军事和外交合作。 俄罗斯外交部长拉夫罗夫上周还到访北京。</p><p style="text-align:start">法新社指出，朔尔茨还与习近平讨论了双边合作领域，特别是气候领域。德方表示：“只有共同努力，我们才能找到阻止气候变化的解决方案，并以社会公平的方式管理绿色能源转型。”</p><p>据中国官媒中央电视台报道，习近平认为，为了应对国际社会面临的“日益增长的风险和挑战”，“大国之间的合作”是“不可或缺的”。习近平表示，“中国和德国分别是世界第二和第三大经济体，（......）巩固和发展中德关系的重要性超出双边关系范围，对亚欧大陆乃至全世界产生重要影响。”</p><p>习近平还说，中德之间“没有根本利益冲突，彼此不构成安全威胁”，只要双方坚持相互尊重，求同存异，交流互鉴，合作共赢，中德关系必将继续行稳致远。习近平又表示，要从长远和战略角度，全方位看待和发展双边关系，把握中德全方位战略伙伴共识。</p><p>此外，据中方释出的声明，其中并没有直接提到台海局势。不过，肖尔茨在上海时曾隐约提及安全议题，称“小国不应该生活在对大国的恐惧中”，各方也不应以武力改变边界。他说：“如果我们的邻居是一个高大、健壮、肌肉强壮的人，那我们总是会想打个招呼，确保他不会伤害我们。”上述发言并未点名中国。</p><p>谈及俄乌战争，央视报道习近平认为，要把握几个原则：一要以和平稳定的大局为重，不要谋求一己私利；二要为局势降温，不要拱火浇油；三要为恢复和平积累条件，不要进一步激化矛盾；四要减少对世界经济的负面影响，不要破坏全球产业链供应链稳定。</p><p>今年是中德建立全方位战略伙伴关系10周年，中国外交部发言人此前表示，中方愿同德方以此访为契机，增进理解信任，深化务实合作，秉持相互尊重、平等相待、互利共赢、求同存异的原则，推动中德关系取得更大发展，共同为世界和平与繁荣作出更大贡献。</p><p>在朔尔茨访华之际，德国的许多西方盟友在一系列贸易问题上与中国对抗。欧盟正在对中国太阳能电池板、电动车和风力涡轮机的国家援助进行一系列调查。同时，美国正在调查中国汽车技术带来的国家安全风险。</p><p style="text-align:left">德国政府先前曾表示，预期双方讨论欧盟去年对中国电动车展开反补贴调查、中国产能过剩，以及德国企业在中国市场面对不公平竞争等问题，相信北京会争取德国不要支持欧盟对华电动车征收惩罚性关税。</p><p style="text-align:left">在周二，朔尔茨也将会见中国总理李强，以及会晤德中经济委员会并举行新闻发布会。</p><p style="text-align:left"> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E5%A4%8F%E6%A6%95/" title="夏榕">夏榕</a></div></div></div></div>
+<div>16/04/2024 - 15:33</div><img src="https://s.rfi.fr/media/display/9f732b30-fbf0-11ee-9d00-005056a90284/w:1280/p:16x9/AP24107274676990.jpg"><p><strong>丹麦首都最著名的建筑之一哥本哈根旧证券交易所发生火灾，火焰吞噬了大楼尖塔并倒塌，这一场景让人想起 2019 年巴黎圣母院火灾。        </strong></p><div><p>哥本哈根火灾让历史悠久的证券交易所被火焰吞没。</p><p>人们看到紧急消防部门、丹麦商会的员工，包括其首席执行官布莱恩·米克尔森(Brian Mikkelsen)，甚至路人都在竞相抢救楼里的大型画作，与火竟时拯救历史文物。</p><p>哥本哈根消防局局长雅各布·维德斯特德·安德森告诉记者：“我们正在尽一切努力拯救一切。”</p><p>丹麦国家博物馆今日表示，已派出 25 名员工前往现场，帮助疏散文物和绘画。这座历史悠久的建筑的尖顶呈四龙交织的尾巴形状，火灾发生时正在进行翻修，并用脚手架覆盖。</p><p>维德斯特德告诉记者，部分屋顶已经倒塌，火势蔓延到大楼顶楼。Vedsted 表示，约有 120 人正在努力控制火势，但只有约 40% 的火势得到控制，灭火行动将持续至少 24 小时。</p><p>警方表示，目前还没有人员受伤的报告。</p><p>丹麦国防部长特罗尔斯·隆德·波尔森 (Troels Lund Poulsen) 在 X 上写道：“来自交易所的可怕照片。太悲伤了。这座标志性建筑对我们所有人来说意义重大……我们自己的巴黎圣母院时刻。”</p><p>浓浓的灰色烟雾在城市上空升起，紧急服务人员赶到现场时可以听到警报声。军方表示，大约 90 名皇家救生卫队应征入伍的士兵正在帮助封锁并保护贵重物品。</p><p>80 岁的教师伊丽莎白·汉德伯格 (Elisabeth Handberg) 说：“我非常非常难过……起初我不敢相信这是真的。”她说，她和她的学生们从教室窗户看到了烟雾。“我的五年级学生说，‘从克里斯蒂安四世国王时代起，建筑就一直在那里。他们也对此非常难过，”她说， “我希望它能被重建，没有其他办法了。”</p><p>这座荷兰文艺复兴风格的建筑不再是丹麦证券交易所的所在地，而是丹麦商会的总部。该建筑最初是为了容纳交易茶叶和香料等商品的摊位而建造的。</p><p>楼顶有全金雕龙。丹麦国家博物馆高级研究员乌拉·克亚尔 (Ulla Kjaer) 告诉路透社，“人们认为丹麦会产出大量黄金，这就是为什么他们在上面放龙，因为龙以守护黄金而闻名。”</p><p>她说，尖塔的顶部还有三个王冠，象征着丹麦、挪威和瑞典这三个伟大的王国。克亚尔还说，“这个尖塔绝对是标志性的，世界上没有其他尖塔可以与之媲美。”商会在其网站上表示，屋顶上的龙被视为象征性地保护交易免受敌人和火灾的侵害。</p><p>弗雷德里克国王在 Instagram 上的一篇帖子中写道：“我们建筑遗产的一个重要部分曾经并且仍然在燃烧。” “世世代代以来，独特的龙形尖塔使哥本哈根成为‘塔楼之城’。”</p><p>建筑物周围的脚手架使紧急服务人员更难够得着火焰，而铜屋顶则阻挡了热量。</p><p>警方称，附近的财政部因火灾而被疏散。</p><p>目前尚不清楚起火原因。</p><p>据路透社说，丹麦商会自 1857 年起就拥有该建筑，并致力于将其恢复为丹麦国王克里斯蒂安四世 (Christian IV) 于 17 世纪建造的风格。</p><p>文化部长雅各布·恩格尔·施密特 (Jakob Engel-Schmidt) 在 X 上写道：“400 年的丹麦文化遗产在火焰中燃烧。”他对记者说：“这座建筑充满了艺术，讲述了很多关于我们的历史，关于我们作为一个民族的身份。”</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWPf.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240416-%25E5%2593%25A5%25E6%259C%25AC%25E5%2593%2588%25E6%25A0%25B9%25E8%25AF%2581%25E5%2588%25B8%25E4%25BA%25A4%25E6%2598%2593%25E6%2589%2580%25E5%25A4%25B1%25E7%2581%25AB-%25E6%25A5%25BC%25E9%25A1%25B6%25E5%25B0%2596%25E5%25A1%2594%25E7%2583%25A7%25E5%25A1%258C&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%93%A5%E6%9C%AC%E5%93%88%E6%A0%B9%E8%AF%81%E5%88%B8%E4%BA%A4%E6%98%93%E6%89%80%E5%A4%B1%E7%81%AB%20%E6%A5%BC%E9%A1%B6%E5%B0%96%E5%A1%94%E7%83%A7%E5%A1%8C%20-%20https%3A%2F%2Frfi.my%2FAWPf.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%93%A5%E6%9C%AC%E5%93%88%E6%A0%B9%E8%AF%81%E5%88%B8%E4%BA%A4%E6%98%93%E6%89%80%E5%A4%B1%E7%81%AB%20%E6%A5%BC%E9%A1%B6%E5%B0%96%E5%A1%94%E7%83%A7%E5%A1%8C%20-%20https%3A%2F%2Frfi.my%2FAWPf.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWPf.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%93%A5%E6%9C%AC%E5%93%88%E6%A0%B9%E8%AF%81%E5%88%B8%E4%BA%A4%E6%98%93%E6%89%80%E5%A4%B1%E7%81%AB%20%E6%A5%BC%E9%A1%B6%E5%B0%96%E5%A1%94%E7%83%A7%E5%A1%8C&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
