--- a/articles/rfi/999986.md
+++ b/articles/rfi/999986.md
@@ -1,5 +1,5 @@
-<!--1713266102000-->
-[围绕俄罗斯核泄露事件的几点疑问？ - 环保天地](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E7%8E%AF%E4%BF%9D%E5%A4%A9%E5%9C%B0/20240416-%E5%9B%B4%E7%BB%95%E4%BF%84%E7%BD%97%E6%96%AF%E6%A0%B8%E6%B3%84%E9%9C%B2%E4%BA%8B%E4%BB%B6%E7%9A%84%E5%87%A0%E7%82%B9%E7%96%91%E9%97%AE)
+<!--1713273301000-->
+[美媒：拜登报复伊朗的选择可能会激怒中国](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240416-%E7%BE%8E%E5%AA%92-%E6%8B%9C%E7%99%BB%E6%8A%A5%E5%A4%8D%E4%BC%8A%E6%9C%97%E7%9A%84%E9%80%89%E6%8B%A9%E5%8F%AF%E8%83%BD%E4%BC%9A%E6%BF%80%E6%80%92%E4%B8%AD%E5%9B%BD)
 ------
 
-<div>16/04/2024 - 12:50</div><img src="https://s.rfi.fr/media/display/48cf8a14-fbd5-11ee-ac1e-005056bfb2b6/w:1280/p:16x9/661544825ce5b.jpg"><p><strong>俄罗斯远东城市哈巴罗夫斯克地区4月5日进入紧急状态，原因是当地发现了一个核辐射源，当地监测到的核辐射值超过正常值的1600倍。路透社引述俄罗斯媒体报道了上述消息之后，引发了中国东北临近俄罗斯边界的民众的恐慌。因为，事实上，哈巴罗夫斯克离黑龙江抚远县仅仅68公里，鉴于俄罗斯在切尔诺贝利核事故事件上犯有前科，此一突如其来的核泄露事件自然引发边界地区民众的恐慌。                    </strong></p><div><p>之后，中国驻哈巴罗夫斯克总领事馆在4月9日发布公告说，核泄露事故已经获得解决，事故的起因是一个工业探伤仪上的铯137胶囊包装受损引发核辐射，目前已被转送至专业监管机构，市政府宣布从4月10日开始解除该市实施的局部紧急状态法。</p><p><strong>中国媒体为何集体失声？</strong></p><p>不过，中国网民对此一事件的质疑并未因此而中止，首先中国官媒为何迟迟没有对事件加以报道？事实上，在路透社4月5日报道哈巴罗夫斯克部分地区进入紧急状态之前，早有居住在俄罗斯的华人在网络社交媒体上披露说，核泄露事故从三月底就已经发生，而中国媒体一直到4月8日才陆续就此作出报道。</p><p>莫非是为了避免在俄罗斯外长拉夫罗夫到访北京之前发表负面新闻？就连中国官媒《环球时报》特约评论员胡锡进似乎也对中国媒体的这种反应表示不满，他在微博上说，“遇到这种事情，边境这边的中国当地媒体应该发声，及时跟进报道，越是详细透明，这边的人，还有网友们越不会猜东猜西，个别人想搞舆情也更难。”有黑龙江佳木斯网民在微信上质疑道：“辐射的范围到底有多大，俄方并没有公布，相关地区检测到的核辐射具体数值是多少，也不知道，源头是怎么泄露的，有几个源头，依然是不知道。俄方何以将掠走的土地，也就是跟他国毗邻的边境地区作为核试验基地，堆放核废料，陈旧核设施废弃不处理，这些就更加不明白了。”</p><p><strong>铯</strong><strong>137</strong><strong>胶囊有何用途？</strong></p><p>那么，倘若俄罗斯当地政府公布的消息属实，铯137胶囊与核试验和核废料并没有直接的关联，铯(Cs）是一种呈银色的软金属。铯137是核弹、核武器试验和核反应堆内核裂变的副产品之一，它会释放伽玛射线，因此被常用于校对医治癌症的放射治疗设备，也可以用于校对用来监测放射治疗人员及病人所接受的辐射水平的辐射监测仪器。铯137也用于监测工业产品的重量、厚度和密度以及探测焊接点和金属管道的裂缝。</p><p>近年来，在巴西、澳大利亚、泰国等国家也有发生过铯137胶囊遗失的先例。去年一月底，澳洲一枚装有放射性物质的微型胶囊据报从一处矿场运至储存设施时，在途中自卡车掉落遗失，澳洲消防部门警告民众倘若发现胶囊，不要用手拿取，而应及时通告有关部门。不过，澳大利亚最终居然大海捞针，找回了这枚体积相当于一枚硬币的胶囊。</p><p><strong>铯</strong><strong>137</strong><strong>胶囊辐射对环境及民众健康有何影响？</strong></p><p>铯137对人体的影响取决于其辐射强度、暴露时间和受影响的人体细胞种类等。如果胶囊破损，风险更大，因为铯137是一个非常高辐射的放射源，可能会引起急性放射病症，如恶心，疲倦，呕吐及毛发脱落等。如果受到约1希沃特辐射剂量的直接照射，甚至可以引致死亡。</p><p>去年，澳大利亚全国都在寻找被丢失的铯137胶囊时，澳大利亚放射性科学研究人员就提出了自然界和人类面临的各种风险。悉尼大学医学院医学影像科学教授戴尔-贝利解释说，铯 137 的 "半衰期"约为 30 年，但三十年之后，其辐射度继续超过环境中的天然辐射水平，大约将延迟约300 年"。</p><p>贝利教授说，这种放射性物质 "会发出贝塔射线和伽马射线"。据他说，装有铯 137 的胶囊不能滤除β射线，只能滤除伽马射线。伽马射线只有在近距离和长时间照射的情况下才会造成损害。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E6%9D%A8%E7%9C%89/" title="杨眉">杨眉</a></div></div></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>16/04/2024 - 15:02</div><img src="https://s.rfi.fr/media/display/20aa3036-f8db-11ee-8af8-005056bf30b7/w:1280/p:16x9/POLLUTION%20AIR.jpg"><p><strong>美国总统拜登的助手正准备因德黑兰袭击以色列而对伊朗实施经济制裁，但专家表示，在不激怒中国或冒油价飙升风险的情况下，他们面临的有意义的选择有限。        </strong></p><div><p>据华盛顿邮报今天报道称，为了报复对伊朗领事馆的袭击，伊朗周末向以色列发射了 300 多架无人机和导弹。但史无前例的空中拦截并未造成重大损失或人员伤亡，美国领导的部队拦截了大部分炮弹。</p><p>尽管如此，随着西方主要官员周一齐聚华盛顿参加国际货币基金组织和世界银行春季会议，美国官员及其欧洲盟友正在讨论对伊朗采取的潜在经济对策。他们的选择很有限，因为伊朗已经是世界上受制裁最严重的国家之一，美国对伊朗银行、制造业和能源部门都实施了惩罚。</p><p>剩下的最明显的选择之一是积极扩大对购买大量伊朗原油出口的中国公司的制裁，这些公司为德黑兰提供了金融生命线，因为伊朗仍然与西方隔绝。去年，美国对中国和伊朗之间石油贸易中的一些商业联系实施了制裁，但专家表示，美国政府可能会采取进一步措施，对更多的中国炼油厂和银行实施限制。</p><p>然而，这样做也有其自身的风险。近几个月来，财政部长耶伦和其他政府官员一直在努力稳定与中国的关系，能源生产的突然打击可能会激怒北京。此外，在供应紧张的情况下，切断伊朗原油的销售可能会导致全球油价飙升，并可能导致 2024 年总统大选前的天然气价格上涨。</p><p>外交政策智库新美国安全中心兼职高级研究员雷切尔·齐姆巴表示：“能够改变游戏规则的选择并不多，因为伊朗大部分地区已经受到制裁。” “但如果你真的想切断伊朗的石油收入，你必须瞄准中国和中国机构。”</p><p>制裁为购买伊朗石油提供便利的中国银行可能会导致全球市场每天减少多达 150 万桶石油。咨询公司拉皮丹能源集团总裁鲍勃·麦克纳利表示，这将使石油价格突破每桶 100 美元，这对拜登政府来说将是一场政治噩梦。“拜登最不想要的就是天然气价格上涨，所以他希望伊朗向中国出售石油。他不希望石油被关闭。就这么简单；他无力制裁伊朗石油，”麦克纳利说。 “他们可以做一些象征性的事情，去追捕这里或那里的小商人，但很可能就是这样。”</p><p>据该报道称，拜登在伊朗袭击后敦促保持冷静。美国已明确表示不会参与以色列对伊朗的任何军事袭击，美国高级官员强调，他们的目标是“缓和地区紧张局势”，防止更广泛的冲突。</p><p>以色列战时内阁周一召开会议，商讨可能的应对措施。</p><p>虽然西方排除了参与军事反应的可能性，但对伊朗行动的经济制裁似乎越来越确定。欧盟委员会主席冯德莱恩表示，布鲁塞尔官员将讨论对伊朗实施更严厉的制裁。她在一份声明中表示：“我们将与我们的合作伙伴密切合作，考虑对伊朗实施进一步的制裁。”</p><p>例如，据两位不愿透露姓名的知情人士透露，美国官员已经讨论了收紧伊朗获得用于人道主义救援的冻结资金的问题。他们还讨论了对伊朗官员和企业实施额外制裁。第一个可能在很大程度上具有象征意义：伊朗已经很难获得这些资金。目前还不清楚对其他公司（例如伊朗无人机零部件国际供应商）的制裁将产生多大影响。</p><p>拜登政府还面临国会山采取行动的压力。众议院周一以压倒性多数通过了旨在打击伊朗向中国出售石油的立法。议会批评者认为，拜登应该进一步确保德黑兰无法从石油出口中获得数十亿美元。</p><p>不过，其他专家表示，挑战在于华盛顿对德黑兰的态度已经过于激进。自特朗普政府放弃总统奥巴马达成的核协议以来，伊朗一直受到严格的经济限制，这使得政策制定者在面对新的紧急情况时几乎没有操作的空间。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWP7.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240416-%25E7%25BE%258E%25E5%25AA%2592-%25E6%258B%259C%25E7%2599%25BB%25E6%258A%25A5%25E5%25A4%258D%25E4%25BC%258A%25E6%259C%2597%25E7%259A%2584%25E9%2580%2589%25E6%258B%25A9%25E5%258F%25AF%25E8%2583%25BD%25E4%25BC%259A%25E6%25BF%2580%25E6%2580%2592%25E4%25B8%25AD%25E5%259B%25BD&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E5%AA%92%EF%BC%9A%E6%8B%9C%E7%99%BB%E6%8A%A5%E5%A4%8D%E4%BC%8A%E6%9C%97%E7%9A%84%E9%80%89%E6%8B%A9%E5%8F%AF%E8%83%BD%E4%BC%9A%E6%BF%80%E6%80%92%E4%B8%AD%E5%9B%BD%20-%20https%3A%2F%2Frfi.my%2FAWP7.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E5%AA%92%EF%BC%9A%E6%8B%9C%E7%99%BB%E6%8A%A5%E5%A4%8D%E4%BC%8A%E6%9C%97%E7%9A%84%E9%80%89%E6%8B%A9%E5%8F%AF%E8%83%BD%E4%BC%9A%E6%BF%80%E6%80%92%E4%B8%AD%E5%9B%BD%20-%20https%3A%2F%2Frfi.my%2FAWP7.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWP7.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E5%AA%92%EF%BC%9A%E6%8B%9C%E7%99%BB%E6%8A%A5%E5%A4%8D%E4%BC%8A%E6%9C%97%E7%9A%84%E9%80%89%E6%8B%A9%E5%8F%AF%E8%83%BD%E4%BC%9A%E6%BF%80%E6%80%92%E4%B8%AD%E5%9B%BD&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
