--- a/articles/rfi/999989.md
+++ b/articles/rfi/999989.md
@@ -1,5 +1,5 @@
-<!--1713264302000-->
-[伊朗袭击以色列：约旦避免成为战区](https://www.rfi.fr/cn/%E4%B8%AD%E4%B8%9C/20240416-%E4%BC%8A%E6%9C%97%E8%A2%AD%E5%87%BB%E4%BB%A5%E8%89%B2%E5%88%97-%E7%BA%A6%E6%97%A6%E9%81%BF%E5%85%8D%E6%88%90%E4%B8%BA%E6%88%98%E5%8C%BA)
+<!--1713271502000-->
+[视频 奥林匹克圣火 赛艇冠军恩图斯科斯首接](https://www.rfi.fr/cn/%E6%B3%95%E5%9B%BD/20240416-%E8%A7%86%E9%A2%91-%E5%A5%A5%E6%9E%97%E5%8C%B9%E5%85%8B%E5%9C%A3%E7%81%AB-%E8%B5%9B%E8%89%87%E5%86%A0%E5%86%9B%E6%81%A9%E5%9B%BE%E6%96%AF%E7%A7%91%E6%96%AF%E9%A6%96%E6%8E%A5)
 ------
 
-<div>16/04/2024 - 12:27</div><img src="https://s.rfi.fr/media/display/8b02d330-fbb9-11ee-aa38-005056a90284/w:1280/p:16x9/000_34PC74K.jpg"><p><strong>约旦经历了一个紧张的周末，伊朗无人机和弹道导弹飞向以色列，其中大部分飞越哈希姆王国的上空，第二天，民众就约旦本是否通过消灭经过约旦领土的伊朗无人机来帮助以色列，爆发争议。        </strong></p><div><p>据本台驻安曼通讯员穆罕默德·埃拉米 (Mohamed Errami)报道称，4月14日周日黎明，数十枚伊朗导弹和无人机飞过约旦上空，伊朗对以色列的袭击显然激起了约旦的愤怒。 约旦的愤怒引致外交部长艾曼·萨法迪发表的严厉且不寻常的外交讲话，他确认约旦军队将摧毁该王国上空的任何导弹，无论这些导弹等等来自伊朗或者来自以色列。</p><p>约旦外长明确警告，“每架进入约旦领空的无人机或导弹都将立即被击落，以保护约旦和约旦人的生命。 在这次袭击之前，我们就在我们的领空击落了许多导弹和无人机。”</p><p>这是政治上迈出的立场。据约旦大学政治学教授、政治专家易卜拉欣·阿图姆博士评估说，约旦王国对伊朗和以色列的言论反映了约旦的严肃立场，约旦不想成为伊朗与以色列冲突的任何一方。</p><p>据易卜拉欣·阿图姆分析说：“约旦的立场在政治上是进一步的，特别是因为约旦拒绝让该王国陷入支持伊朗和支持以色列各方之间口水争议的泥淖。”</p><p>约旦国王阿卜杜拉二世在接听美国总统乔·拜登的电话时就肯定，国王本人以及他的国家都拒绝接受约旦正在成为中东地区战区的事实。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWN7.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E4%25B8%259C%2F20240416-%25E4%25BC%258A%25E6%259C%2597%25E8%25A2%25AD%25E5%2587%25BB%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597-%25E7%25BA%25A6%25E6%2597%25A6%25E9%2581%25BF%25E5%2585%258D%25E6%2588%2590%25E4%25B8%25BA%25E6%2588%2598%25E5%258C%25BA&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%BC%8A%E6%9C%97%E8%A2%AD%E5%87%BB%E4%BB%A5%E8%89%B2%E5%88%97%EF%BC%9A%E7%BA%A6%E6%97%A6%E9%81%BF%E5%85%8D%E6%88%90%E4%B8%BA%E6%88%98%E5%8C%BA%20-%20https%3A%2F%2Frfi.my%2FAWN7.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%BC%8A%E6%9C%97%E8%A2%AD%E5%87%BB%E4%BB%A5%E8%89%B2%E5%88%97%EF%BC%9A%E7%BA%A6%E6%97%A6%E9%81%BF%E5%85%8D%E6%88%90%E4%B8%BA%E6%88%98%E5%8C%BA%20-%20https%3A%2F%2Frfi.my%2FAWN7.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWN7.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%BC%8A%E6%9C%97%E8%A2%AD%E5%87%BB%E4%BB%A5%E8%89%B2%E5%88%97%EF%BC%9A%E7%BA%A6%E6%97%A6%E9%81%BF%E5%85%8D%E6%88%90%E4%B8%BA%E6%88%98%E5%8C%BA&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>16/04/2024 - 13:22</div><img src="https://s.rfi.fr/media/display/6535cae0-fbe1-11ee-8e3d-005056a97e36/w:1280/p:16x9/Flame%20olympique.JPG"><p><strong>点燃奥运圣火仪式星期二在希腊奥林匹亚的赫拉神庙遗址隆重举行，希腊女祭司把圣火传递给奥运希腊赛艇冠军法国运动员斯特凡诺斯-恩图斯科斯（Stefanos Ntouskos），请看France24报道。        </strong></p><div><p>距离巴黎奥运会还有大约100天，点燃奥运圣火仪式星期二在希腊奥林匹亚的赫拉神庙遗址隆重举行，奥运希腊赛艇冠军法国运动员斯特凡诺斯-恩图斯科斯（Stefanos Ntouskos）首次接受。</p><p>法国运动员斯特凡诺斯-恩图斯科斯是希腊奥运赛艇冠军和室外赛艇金牌得主，他在11月被选中来迎接奥运会圣火 。</p><p>主持仪式的希腊大祭司把圣火交给了斯特凡诺斯-恩图斯科斯，并请他诠释她早些时候激发的来自上帝的和平信息。</p><p>法国奥运冠军斯特凡诺斯-恩图斯科斯高举这支火炬，并且跑几米将火炬传递给奥运游泳冠军法国女选手洛尔·马诺杜，启动奥运圣火巴黎之旅，奥运圣火在5月8日到达马赛。</p><p>女祭司释放一只白鸽子，这只鸽子在古老的奥林匹亚体育场展翅高飞。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWNt.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25B3%2595%25E5%259B%25BD%2F20240416-%25E8%25A7%2586%25E9%25A2%2591-%25E5%25A5%25A5%25E6%259E%2597%25E5%258C%25B9%25E5%2585%258B%25E5%259C%25A3%25E7%2581%25AB-%25E8%25B5%259B%25E8%2589%2587%25E5%2586%25A0%25E5%2586%259B%25E6%2581%25A9%25E5%259B%25BE%25E6%2596%25AF%25E7%25A7%2591%25E6%2596%25AF%25E9%25A6%2596%25E6%258E%25A5&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%A7%86%E9%A2%91%20%E5%A5%A5%E6%9E%97%E5%8C%B9%E5%85%8B%E5%9C%A3%E7%81%AB%20%E8%B5%9B%E8%89%87%E5%86%A0%E5%86%9B%E6%81%A9%E5%9B%BE%E6%96%AF%E7%A7%91%E6%96%AF%E9%A6%96%E6%8E%A5%20-%20https%3A%2F%2Frfi.my%2FAWNt.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%A7%86%E9%A2%91%20%E5%A5%A5%E6%9E%97%E5%8C%B9%E5%85%8B%E5%9C%A3%E7%81%AB%20%E8%B5%9B%E8%89%87%E5%86%A0%E5%86%9B%E6%81%A9%E5%9B%BE%E6%96%AF%E7%A7%91%E6%96%AF%E9%A6%96%E6%8E%A5%20-%20https%3A%2F%2Frfi.my%2FAWNt.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWNt.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%A7%86%E9%A2%91%20%E5%A5%A5%E6%9E%97%E5%8C%B9%E5%85%8B%E5%9C%A3%E7%81%AB%20%E8%B5%9B%E8%89%87%E5%86%A0%E5%86%9B%E6%81%A9%E5%9B%BE%E6%96%AF%E7%A7%91%E6%96%AF%E9%A6%96%E6%8E%A5&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
