--- a/articles/rfi/999992.md
+++ b/articles/rfi/999992.md
@@ -1,5 +1,5 @@
-<!--1713262501000-->
-[习近平计划5月8日访问贝尔格莱德](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240416-%E4%B9%A0%E8%BF%91%E5%B9%B3%E8%AE%A1%E5%88%925%E6%9C%888%E6%97%A5%E8%AE%BF%E9%97%AE%E8%B4%9D%E5%B0%94%E6%A0%BC%E8%8E%B1%E5%BE%B7)
+<!--1713266101000-->
+[法属马约特岛今举“净化”行动](https://www.rfi.fr/cn/%E6%B3%95%E5%9B%BD/20240416-%E6%B3%95%E5%B1%9E%E9%A9%AC%E7%BA%A6%E7%89%B9%E5%B2%9B%E4%BB%8A%E4%B8%BE-%E7%A4%BE%E4%BC%9A%E5%87%80%E5%8C%96-%E8%A1%8C%E5%8A%A8)
 ------
 
-<div>16/04/2024 - 11:59</div><img src="https://s.rfi.fr/media/display/4d8569f4-a052-11ee-9e08-005056bfb2b6/w:1280/p:16x9/000_347Z8B6.jpg"><p><strong>塞尔维亚媒体德莫斯塔特称从外交消息来源获悉，中国国家主席习近平将于 5 月 8 日抵达贝尔格莱德。访问塞尔维亚期间，中国国家主席习近平将会见塞尔维亚总统武契奇和该国其他官员。        </strong></p><div><p>据Demostat报道称，今年2月，塞尔维亚总统武契奇在中国农历新年仪式上表示，他已收到中国国家主席习近平将于2024年访问贝尔格莱德的确认消息，并评价习近平是塞尔维亚的真诚的朋友，也是世界最重要的领导人之一。</p><p>武契奇上次会见习近平是去年10月在北京举行的第三届“一带一路”高峰论坛期间。</p><p>2016年6月，习近平已访问塞尔维亚，当时是中国国家主席时隔32年后首次访问贝尔格莱德。</p><p>该报称，3月中旬，有消息说习近平将于5月在巴黎会见法国总统马克龙，此访恰逢庆祝两国建交60周年。</p><p>这将是新冠病毒大流行以来中国国家主席习近平首次访问欧洲。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWMe.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240416-%25E4%25B9%25A0%25E8%25BF%2591%25E5%25B9%25B3%25E8%25AE%25A1%25E5%2588%25925%25E6%259C%25888%25E6%2597%25A5%25E8%25AE%25BF%25E9%2597%25AE%25E8%25B4%259D%25E5%25B0%2594%25E6%25A0%25BC%25E8%258E%25B1%25E5%25BE%25B7&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%B9%A0%E8%BF%91%E5%B9%B3%E8%AE%A1%E5%88%925%E6%9C%888%E6%97%A5%E8%AE%BF%E9%97%AE%E8%B4%9D%E5%B0%94%E6%A0%BC%E8%8E%B1%E5%BE%B7%20-%20https%3A%2F%2Frfi.my%2FAWMe.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%B9%A0%E8%BF%91%E5%B9%B3%E8%AE%A1%E5%88%925%E6%9C%888%E6%97%A5%E8%AE%BF%E9%97%AE%E8%B4%9D%E5%B0%94%E6%A0%BC%E8%8E%B1%E5%BE%B7%20-%20https%3A%2F%2Frfi.my%2FAWMe.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWMe.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%B9%A0%E8%BF%91%E5%B9%B3%E8%AE%A1%E5%88%925%E6%9C%888%E6%97%A5%E8%AE%BF%E9%97%AE%E8%B4%9D%E5%B0%94%E6%A0%BC%E8%8E%B1%E5%BE%B7&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>16/04/2024 - 11:49</div><img src="https://s.rfi.fr/media/display/1f264926-e346-11ed-b0e4-005056bfb2b6/w:1280/p:16x9/image-81.jpg"><p><strong>在名为“Waambushu”的首次干预措施一年后，印度洋法属群岛马约特岛今天启动了一项针对不安全、非法移民和脏乱差住房的纠改新行动。        </strong></p><div><p>大约 1,700 名宪兵、警察和士兵将参与这项名为“马约特“Waambushu”的行动，并且将行动持续 11 周。</p><p>法国内政部向法新社强调，在法国第101省，也是最贫困的省份增派一百名专业增援人员，包括边防警察和司法警察将帮助我们开展这项工作”。</p><p>据法国内政部称，派有 60 名特别通缉人员，目标是摧毁 1,300 个 bangas（小屋），是去年 Wuambushu 1行动所摧毁的不适合居住棚屋的两倍。</p><p>中央政府拨款 500 万欧元，用于为行动中被捕的非法移民提供紧急住宿。</p><p>目前已经有1,600 名宪兵和警察已经驻扎在这片拥有 35 万居民的地区。</p><p>据法新社今天报道称，最近几天，马约特岛的暴力事件有所增加，驾车者每天都会被扔石头，来自敌对村庄的年轻人团伙之间的冲突也突增。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWMR.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25B3%2595%25E5%259B%25BD%2F20240416-%25E6%25B3%2595%25E5%25B1%259E%25E9%25A9%25AC%25E7%25BA%25A6%25E7%2589%25B9%25E5%25B2%259B%25E4%25BB%258A%25E4%25B8%25BE-%25E7%25A4%25BE%25E4%25BC%259A%25E5%2587%2580%25E5%258C%2596-%25E8%25A1%258C%25E5%258A%25A8&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%B3%95%E5%B1%9E%E9%A9%AC%E7%BA%A6%E7%89%B9%E5%B2%9B%E4%BB%8A%E4%B8%BE%E2%80%9C%E5%87%80%E5%8C%96%E2%80%9D%E8%A1%8C%E5%8A%A8%20-%20https%3A%2F%2Frfi.my%2FAWMR.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%B3%95%E5%B1%9E%E9%A9%AC%E7%BA%A6%E7%89%B9%E5%B2%9B%E4%BB%8A%E4%B8%BE%E2%80%9C%E5%87%80%E5%8C%96%E2%80%9D%E8%A1%8C%E5%8A%A8%20-%20https%3A%2F%2Frfi.my%2FAWMR.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWMR.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%B3%95%E5%B1%9E%E9%A9%AC%E7%BA%A6%E7%89%B9%E5%B2%9B%E4%BB%8A%E4%B8%BE%E2%80%9C%E5%87%80%E5%8C%96%E2%80%9D%E8%A1%8C%E5%8A%A8&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
