--- a/articles/rfi/999998.md
+++ b/articles/rfi/999998.md
@@ -1,5 +1,5 @@
-<!--1713260703000-->
-[朔尔茨访华：魅力攻势先行 - 柏林飞鸿](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E6%9F%8F%E6%9E%97%E9%A3%9E%E9%B8%BF/20240416-%E6%9C%94%E5%B0%94%E8%8C%A8%E8%AE%BF%E5%8D%8E-%E9%AD%85%E5%8A%9B%E6%94%BB%E5%8A%BF%E5%85%88%E8%A1%8C)
+<!--1713262501000-->
+[美国众议院议长推动就援助以色列、乌克兰和台湾问题进行投票](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240416-%E7%BE%8E%E5%9B%BD%E4%BC%97%E8%AE%AE%E9%99%A2%E8%AE%AE%E9%95%BF%E6%8E%A8%E5%8A%A8%E5%B0%B1%E6%8F%B4%E5%8A%A9%E4%BB%A5%E8%89%B2%E5%88%97-%E4%B9%8C%E5%85%8B%E5%85%B0%E5%92%8C%E5%8F%B0%E6%B9%BE%E9%97%AE%E9%A2%98%E8%BF%9B%E8%A1%8C%E6%8A%95%E7%A5%A8)
 ------
 
-<div>16/04/2024 - 11:36</div><img src="https://s.rfi.fr/media/display/8de3cb06-731e-11ed-810a-005056a97e36/w:1280/p:16x9/AP22308420140671.jpg"><p><strong>德国总理朔尔茨于本月14-16日对中国进行为期3天的访问。这是他担任总理以来时间最长的国事访问。德国媒体自然表示了多方关注。对朔尔茨周一（4月15日）在同济大学的演讲和与学生们的交流，多份媒体表示了赞扬。                    </strong></p><div><p>《法兰克福汇报》就朔尔茨在同济大学发表演讲一事指出，朔尔茨向学生们讲述了倾销、知识产权保护和他的不消费大麻等。他发出的信息很明确：他在畅所欲言。他喜欢说“谢谢”。这一回，他是真心感谢中国给了他自由表达的机会，而不必直接冒犯政治东道主。这是朔尔茨为言论自由做广告的方式。</p><p>《南德意志报》表示，朔尔茨在同济大学为知识产权保护做了广告。他还强调，俄罗斯对乌克兰发动的是侵略战争，并要求不要武力推移边界。该报指出，中国向俄罗斯提供了有力帮助，以便俄罗斯能绕开西方的制裁。中国向俄罗斯提供了所谓的军民两用物品。这是俄罗斯为其武器生产所需要的物品。朔尔茨通过与大学生交流的方式，事先从上海向北京发出了他要传达的信息，其中包括知识产权保护以及倾销对经济发展的损害等。他在上海既做了广告，又发出了警告。</p><p>德国N-TV电视台表示，德国希望在不疏远其重要贸易伙伴的情况下，更加独立于中国。朔尔茨对中国的访问有如走钢丝，在困难中寻求平衡。柏林墨卡托中国研究中心的曾格莱因（Max Zenglein）怀疑，朔尔茨在公平竞争方面能否取得任何成就。朔尔茨此行更多的是要发出一个信号。</p><p>德国巴州广播电台指出，中国电动汽车是朔尔茨访华之行的一个话题。鉴于欧盟可能对中国生产的电动汽车征收惩罚性关税，朔尔茨呼吁中国创造公平的竞争条件，但对欧盟可能采取的措施持保留态度。他呼吁中国电动汽车在欧盟获得开放市场，但不要倾销，不要生产过剩。虽然欧盟仍在对中国电动汽车进行反补贴调查，但亚洲汽车专家Jochen Siebert估计，如果个别制造商的生产受到补贴，例如通过降低工厂电价等，补贴就很难证明。如果欧盟在年中得出结论，认为倾销正在发生，其惩罚性关税就可能随之而来。上海德国商会常务董事布特克（Maximilian Butek）对此不以为然。他认为，惩罚性关税也会损害中国汽车制造商的德国供应商。他们要求的是采取对策，而不是施加惩罚性关税。</p><p>北德广播电台发现，因发生伊朗空袭以色列事件，朔尔茨此行面临很多危机，以至于没有多少睡眠时间。而随行的宝马总裁<a href="https://www.google.de/search?sca_esv=5ba0164fee2f9f16&sxsrf=ACQVn0__Wsivw2IfdcureLYzzW_siAuVdw:1713187358932&q=Oliver+Zipse&stick=H4sIAAAAAAAAAONgVuLVT9c3NEwyLyurjM8pe8RowS3w8sc9YSn9SWtOXmPU5OIKzsgvd80rySypFJLmYoOyBKX4uVB18ixi5fHPySxLLVKIyiwoTgUAMjlWYVsAAAA&sa=X&ved=2ahUKEwjhw9mfqMSFAxVIavEDHbWcBcYQzIcDKAB6BAgVEAE" target="_blank">Oliver Zipse</a>则在接受采访时表示，虽然德国的对华战略是要求去风险，但去风险并不意味着撤退。</p><p>德国《经济周刊》的印象是：朔尔茨中国之行起步时，首先在重庆访问了一家公司。朔尔茨的行程看起来像是一次重要的魅力攻势，而且不仅仅是在第一天：商务第一，顾虑第二。而这正好是发生在德国经济疲软之时。柏林墨卡托中国研究所（Mercator Institute for China Studies）首席经济学家马克斯-曾格莱因（Max Zenglein）表示：“总理此行明显是在沿袭旧有模式。”这正是中国领导层希望看到的访华之行。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E6%9F%8F%E6%9E%97%E7%89%B9%E7%BA%A6%E8%AE%B0%E8%80%85-%E4%B8%B9%E5%85%B0/" title="柏林特约记者 丹兰">柏林特约记者 丹兰</a></div></div></div></div>
+<div>16/04/2024 - 11:14</div><img src="https://s.rfi.fr/media/display/bc7a9f9c-d008-11ee-b8e2-005056a90284/w:1280/p:16x9/congress-3.jpg"><p><strong>美国众议院议长迈克·约翰逊本周正在推动对以色列、乌克兰和台湾的援助采取行动，根据他于周一公布的一项详尽的计划，国会或将该计划分成单独的投票，以弥合众议院在外交政策上的政治分歧。        </strong></p><div><p>据美联社今天报道称，面对强烈反对援助乌克兰的保守派的反抗，属于共和党的议长在对外援助计划上的举动可能是一个分水岭，这是该法案在拖延两个多月后首次采取重大行动。但约翰逊打算对该计划的部分内容进行四次单独投票，这也使得该计划可能会较参议院 2 月份通过的 950 亿美元援助计划进行重大修改。</p><p>目前尚不清楚众议院最终是否会提出与参议院法案类似的一揽子计划，或者有什么显着不同，这可能会使长达数月的艰苦努力让国会批准对乌克兰的军事资助变得更加复杂。</p><p>但与此同时，世界各地的冲突不断升级。以色列军事首长周一表示，以色列将对伊朗周末的导弹袭击做出回应。乌克兰军方首脑周末警告说，由于天气变暖，俄罗斯军队可以发动新的攻势，乌克兰东部的战场局势“近几天显着恶化”。</p><p>乌克兰外交部长表示，以色列对伊朗空袭的破解反应表明了基辅的需要。</p><p>据约翰逊说，“全球各地正在发生一些突发事件，我们都在非常仔细地关注，我们知道全世界都在关注我们，看看我们如何反应。”</p><p>总统拜登在白宫接待了捷克总理菲亚拉，拜登呼吁众议院立即审议参议院的拨款计划。拜登说， “他们现在必须这样做。”</p><p>据一位不愿透露姓名的知情人士透露，约翰逊和拜登周一发表了讲话。</p><p>众议院的民主党人可能愿意帮助约翰逊通过部分援助，甚至可能同意共和党人正在讨论的一些额外措施，例如以贷款形式提供部分乌克兰经济援助。</p><p>但如果约翰逊过于偏向共和党的优先事项，他就会失去他所需要的民主党支持。对该计划的任何修改也有可能在参议院遭受挫折，参议院中大部分共和党人反对向乌克兰提供援助，而民主党人对以色列在加沙的行动越来越感到震惊。</p><p>当众议院议员周一晚上返回国会时，约翰逊与共和党议员们聚集在一起，制定了他的策略，以争取众议院批准该拨款计划。他表示，他将推动该方案在单一辩论规则下提交众议院，该规则允许就乌克兰、以色列、台湾援助和其他外交政策提案进行单独投票。</p><p>约翰逊表示，这些提议将以贷款的形式为基辅提供部分资金，允许美国扣押冻结的俄罗斯央行资产，并对伊朗实施其他制裁。</p><p>共和党会议上议员们在处理与俄罗斯冲突的问题上意见不一：共和党国防鹰派，包括国家安全委员会的高级议员，与民粹主义保守派展开对立，后者强烈反对继续支持基辅的斗争。</p><p>尽管如此，约翰逊对乌克兰援助的支持可能会进一步激怒民粹主义保守派，他们已经对他作为议长的指示感到愤怒。</p><p>同时，民主党人向约翰逊施压，要求他接受参议院通过的法案，该法案将为美国盟友提供总额950 亿美元的资金，并为加沙和乌克兰的平民提供人道主义支持。</p><p>参议院多数党领袖查克·舒默表示：“众议院必须尽快向以色列提供援助，而做到这一点的唯一方法是尽快通过参议院的补充协议。”</p><p>据美联社说，参议院共和党领袖米奇·麦康奈尔周一下午敦促众议院审议参议院的法案。他在一次发言中表示，“如果不表现出决心并认真投资美国的实力，我们就不能指望阻止冲突。”</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWLu.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240416-%25E7%25BE%258E%25E5%259B%25BD%25E4%25BC%2597%25E8%25AE%25AE%25E9%2599%25A2%25E8%25AE%25AE%25E9%2595%25BF%25E6%258E%25A8%25E5%258A%25A8%25E5%25B0%25B1%25E6%258F%25B4%25E5%258A%25A9%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597-%25E4%25B9%258C%25E5%2585%258B%25E5%2585%25B0%25E5%2592%258C%25E5%258F%25B0%25E6%25B9%25BE%25E9%2597%25AE%25E9%25A2%2598%25E8%25BF%259B%25E8%25A1%258C%25E6%258A%2595%25E7%25A5%25A8&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E5%9B%BD%E4%BC%97%E8%AE%AE%E9%99%A2%E8%AE%AE%E9%95%BF%E6%8E%A8%E5%8A%A8%E5%B0%B1%E6%8F%B4%E5%8A%A9%E4%BB%A5%E8%89%B2%E5%88%97%E3%80%81%E4%B9%8C%E5%85%8B%E5%85%B0%E5%92%8C%E5%8F%B0%E6%B9%BE%E9%97%AE%E9%A2%98%E8%BF%9B%E8%A1%8C%E6%8A%95%E7%A5%A8%20-%20https%3A%2F%2Frfi.my%2FAWLu.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E5%9B%BD%E4%BC%97%E8%AE%AE%E9%99%A2%E8%AE%AE%E9%95%BF%E6%8E%A8%E5%8A%A8%E5%B0%B1%E6%8F%B4%E5%8A%A9%E4%BB%A5%E8%89%B2%E5%88%97%E3%80%81%E4%B9%8C%E5%85%8B%E5%85%B0%E5%92%8C%E5%8F%B0%E6%B9%BE%E9%97%AE%E9%A2%98%E8%BF%9B%E8%A1%8C%E6%8A%95%E7%A5%A8%20-%20https%3A%2F%2Frfi.my%2FAWLu.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWLu.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E5%9B%BD%E4%BC%97%E8%AE%AE%E9%99%A2%E8%AE%AE%E9%95%BF%E6%8E%A8%E5%8A%A8%E5%B0%B1%E6%8F%B4%E5%8A%A9%E4%BB%A5%E8%89%B2%E5%88%97%E3%80%81%E4%B9%8C%E5%85%8B%E5%85%B0%E5%92%8C%E5%8F%B0%E6%B9%BE%E9%97%AE%E9%A2%98%E8%BF%9B%E8%A1%8C%E6%8A%95%E7%A5%A8&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
