--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-17 [英国外相访问以色列,称以色列已决定报复伊朗](/articles/voa/1016320.md)
+
+4-17 [防缅甸战火越境蔓延，解放军在中缅边境再举行实弹演习](/articles/voa/1016321.md)
+
 4-17 [拜登要求提高中国钢铁产品进口关税，争取工会及关键摇摆州钢铁工人选票](/articles/voa/1016322.md)
 
 4-17 [史上最大规模“肩并肩”军演在即，美菲军队将联合举行夺岛演练](/articles/voa/1016323.md)
@@ -596,8 +600,4 @@
 4-6 [美中军方在夏威夷会谈](/articles/voa/1016618.md)
 
 4-6 [纽约市附近发生4.8级地震震动美国东北部地区](/articles/voa/1016619.md)
-
-4-6 [被指对袭击加沙救援人员负责，两名以军高级军官被解职](/articles/voa/1016620.md)
-
-4-5 [台湾花莲余震救援困难 数百人仍受困灾区](/articles/voa/1016621.md)
 
