--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+4-18 [美军新型陆基导弹首次现踪第一岛链](/articles/rfa/1037296.md)
+
+4-17 [美国海关扣押涉监狱强迫劳动的中国商品](/articles/rfa/1037297.md)
+
 4-17 [重庆更换智能燃气表 居民投诉燃气费陡增引官方调查](/articles/rfa/1037298.md)
 
 4-17 [抗议孔子学院揭牌　专访西班牙教授马尔·莱拉](/articles/rfa/1037299.md)
@@ -596,8 +600,4 @@
 3-14 [专家：台湾面临北京非武力胁迫 欧洲亦是胁迫目标之一](/articles/rfa/1037594.md)
 
 3-13 [国家队出手救万科　“破产”之说遭打脸](/articles/rfa/1037595.md)
-
-3-13 [“建三江事件”10周年　中国律师团倡议纪念](/articles/rfa/1037596.md)
-
-3-13 [俄纪念与华边境冲突55周年   中国官媒装聋作哑](/articles/rfa/1037597.md)
 
